Updated text in all language json files

--- a/static/languages/da.json
+++ b/static/languages/da.json
@@ -1,18 +1,18 @@
 {
-  "heading": "Udgifter til uddannelse op i alle EU-lande",
-  "subheading": "Offentlige udgifter til militært forsvar som en procentdel af BNP i lande i Den Europæiske Union i 2020",
+  "heading": "Hvor dybtgående er de grundlæggende digitale færdigheder blandt 15-74-årige borgere i alle EU-lande?",
+  "subheading": "I 2022 rapporterede næsten 30 % af de beskæftigede i EU i alderen 15-74, at de brugte digitale enheder i hele eller det meste af deres arbejdstid. Desuden svarede 62 % af de i 2023 interviewede SMV'er (små og mellemstore virksomheder) i Flash Eurobarometer 529, at digitale færdigheder er blevet stadig vigtigere for deres virksomhed. Fra 2023 har 56 % af EU-befolkningen mindst grundlæggende digitale færdigheder.",
   "legend1": "Ingen tilgængelig data",
-  "tooltip1": "af BNP",
+  "tooltip1": "har grundlæggende digitale færdigheder",
   "textSourceDescription": "Kilde",
   "textSource": "Eurostat",
   "textNoteDescription": "Bemærk",
-  "textNote": "Offentlige udgifter efter COFOG (UNSD-klassifikation af offentlige funktioner, gentaget i ESA2010) funktion og type.",
-  "textDataAccess": "Få adgang til dataene",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=da",
+  "textNote": "Overordnede digitale færdigheder refererer til fem områder: informations- og datafærdigheder, kommunikations- og samarbejdsevner, færdigheder til at skabe digitalt indhold, sikkerhedsfærdigheder og problemløsningsevner. For at have mindst grundlæggende overordnede digitale færdigheder skal folk vide, hvordan man laver mindst én aktivitet relateret til hvert område.",
+  "textDataAccess": "Få adgang til data",
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
   "textCountryClick": "Klik for mere info",
   "extraInfoText_BE": "Da behovet for enstemmighed forårsager en bureaukratisk flaskehals på mange områder, er der en vis logik i at gå hen imod afstemning med kvalificeret flertal, hvor det er muligt. I praksis er et kvalificeret flertal, når 15 af de 27 medlemslande stemmer for noget, så længe de tilsammen repræsenterer mere end 65 procent af EU’s 450 millioner borgere.",
   "extraInfoLink_BE": "Læs mere",
-  "extraInfoText_DE": "Det er formentlig ikke tilfældigt, at EU-Kommissionen blot to dage senere meddelte, at den endelig ville udløse konditionalitetsmekanismen, som forbinder udbetalingen af EU-midler med respekten for retsstatsprincippet. Budapest er udsat for kritik for begrænsninger af mediefrihed, interessekonflikter og korruption.",
+  "extraInfoText_DE": "Det er formentlig ikke tilfældigt, at EU-Kommissionen blot to dage senere meddelte, at den endelig ville udløse konditionalitetsmekanismen, som forbinder udbetalingen af EU-midler med respekten for retsstaten. Budapest er udsat for kritik over begrænsninger af mediefrihed, interessekonflikter og korruption.",
   "extraInfoLink_DE": "Læs mere",
   "extraInfoText_ES": "",
   "extraInfoLink_ES": "",
