--- a/static/languages/fi.json
+++ b/static/languages/fi.json
@@ -1,18 +1,18 @@
 {
-  "heading": "Koulutusmenot kasvavat kaikissa EU-maissa",
-  "subheading": "Julkiset menot sotilaalliseen puolustukseen suhteessa BKT:hen Euroopan unionin maissa vuonna 2020",
+  "heading": "Kuinka syvällisiä digitaaliset perustaidot ovat 15–74-vuotiaiden kansalaisten keskuudessa kaikissa EU-maissa?",
+  "subheading": "Vuonna 2022 lähes 30 prosenttia EU:n 15–74-vuotiaista työllisistä ilmoitti käyttävänsä digitaalisia laitteita koko tai suurimman osan työajastaan. Lisäksi 62 prosenttia vuonna 2023 haastatelluista pk-yrityksistä (pienet ja keskisuuret yritykset) vastasi Flash Eurobarometer 529 -tutkimuksessa, että digitaaliset taidot ovat tulleet yhä tärkeämmiksi heidän liiketoiminnassaan. Vuodesta 2023 lähtien 56 prosentilla EU:n ihmisistä on vähintään digitaaliset perustaidot.",
   "legend1": "Tietoja ei ole saatavilla",
-  "tooltip1": "BKT:sta",
+  "tooltip1": "sinulla on perusdigitaalitaidot",
   "textSourceDescription": "Lähde",
   "textSource": "Eurostat",
-  "textNoteDescription": "Merkintä",
-  "textNote": "Julkiset menot COFOG:n (UNSD:n julkishallinnon toimintojen luokittelu, jäljennetty ESA2010:ssä) toiminnon ja tyypin mukaan.",
+  "textNoteDescription": "Huomautus",
+  "textNote": "Digitaaliset taidot kattavat viisi aluetta: tieto- ja datalukutaidot, viestintä- ja yhteistyötaidot, digitaalisen sisällön luontitaidot, turvallisuustaidot ja ongelmanratkaisutaidot. Jotta ihmisillä olisi vähintään perusdigitaaliset taidot, ihmisten on osattava tehdä vähintään yksi kullekin osa-alueelle liittyvä toiminta.",
   "textDataAccess": "Käytä tietoja",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=fi",
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
   "textCountryClick": "Napsauta saadaksesi lisätietoja",
   "extraInfoText_BE": "Koska yksimielisyyden tarve aiheuttaa byrokraattisen pullonkaulan monilla aloilla, on tietty logiikka siirtyä kohti määräenemmistöäänestystä mahdollisuuksien mukaan. Käytännössä määräenemmistö on, kun 15 jäsenvaltiosta 27:stä äänestää jonkin asian puolesta, kunhan ne yhdessä edustavat yli 65 prosenttia EU:n 450 miljoonasta kansalaisesta.",
   "extraInfoLink_BE": "Lue lisää",
-  "extraInfoText_DE": "Ei luultavasti ole sattumaa, että vain kaksi päivää myöhemmin Euroopan komissio ilmoitti vihdoin käynnistävänsä ehdollisuusmekanismin, joka yhdistää EU:n varojen maksamisen oikeusvaltioperiaatteen noudattamiseen. Budapestia arvostellaan tiedotusvälineiden vapauden rajoituksista, eturistiriidoista ja korruptiosta.",
+  "extraInfoText_DE": "Ei luultavasti ole sattumaa, että Euroopan komissio ilmoitti vain kaksi päivää myöhemmin ottavansa vihdoin käyttöön ehdollisuusmekanismin, joka yhdistää EU:n varojen maksamisen oikeusvaltioperiaatteen noudattamiseen. Budapestia arvostellaan tiedotusvälineiden vapauden rajoituksista, eturistiriidoista ja korruptiosta.",
   "extraInfoLink_DE": "Lue lisää",
   "extraInfoText_ES": "",
   "extraInfoLink_ES": "",
