--- a/static/languages/bg.json
+++ b/static/languages/bg.json
@@ -1,14 +1,14 @@
 {
-  "heading": "Разходите за образование се увеличават във всички страни от ЕС",
-  "subheading": "Общите държавни разходи за военна отбрана като процент от БВП в страните от Европейския съюз през 2020 г.",
+  "heading": "Колко задълбочени са основните дигитални умения сред гражданите на възраст 15-74 години във всички страни от ЕС?",
+  "subheading": "През 2022 г. близо 30 % от заетите хора в ЕС на възраст 15-74 години съобщават, че използват цифрови устройства през цялото или по-голямата част от работното си време. Освен това 62% от интервюираните през 2023 г. МСП (малки и средни предприятия) отговарят във Flash Eurobarometer 529, че цифровите умения стават все по-важни за техния бизнес. Към 2023 г. 56% от хората в ЕС имат поне основни цифрови умения.",
   "legend1": "Няма данни",
-  "tooltip1": "от БВП",
+  "tooltip1": "имат основни цифрови умения",
   "textSourceDescription": "Източник",
   "textSource": "Евростат",
   "textNoteDescription": "Забележка",
-  "textNote": "Правителствени разходи по COFOG (класификация на функциите на правителството на UNSD, възпроизведена в ESA2010) функция и тип.",
+  "textNote": "Общите дигитални умения се отнасят до пет области: умения за информационна и информационна грамотност, умения за комуникация и сътрудничество, умения за създаване на цифрово съдържание, умения за безопасност и умения за решаване на проблеми. За да имат поне основни цялостни цифрови умения, хората трябва да знаят как да извършват поне една дейност, свързана с всяка област.",
   "textDataAccess": "Достъп до данните",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
   "textCountryClick": "Кликнете за повече информация",
   "extraInfoText_BE": "Тъй като необходимостта от единодушие причинява бюрократично затруднение в много области, има определена логика да се премине към гласуване с квалифицирано мнозинство, когато е възможно. На практика квалифицирано мнозинство е, когато 15 от 27-те държави-членки гласуват в полза на нещо, стига заедно да представляват повече от 65 процента от 450-те милиона граждани на ЕС.",
   "extraInfoLink_BE": "Прочетете още",
@@ -20,7 +20,7 @@
   "extraInfoLink_FR": "",
   "extraInfoText_IT": "Гашпер Довжан, държавен секретар във външното министерство на Словения и член на комитета на конференцията, казва, че Словения със сигурност не се свени от смели решения или отхвърля възможността за преминаване към квалифицирано мнозинство. Той обаче смята, че все още има място за консенсусно вземане на решения.",
   "extraInfoLink_IT": "Повече информация",
-  "extraInfoText_LU": "И все пак люксембургският евродепутат Марк Анхел е убеден, че промените в договора са абсолютно необходими – не само за да направят процедурите за вземане на решения по-малко тромави, но и за да разширят сферата на компетентност на ЕС. Той твърди в интервю за люксембургската национална телевизия 100,7, че гражданите на ЕС ясно са поискали това по време на процеса на конференцията.",
+  "extraInfoText_LU": "И все пак люксембургският евродепутат Марк Анхел е убеден, че промените в договора са абсолютно необходими – не само за да направят процедурите за вземане на решения по-малко тромави, но и за да разширят сферата на компетентност на ЕС. Той твърди в интервю за националния телевизионен оператор на Люксембург 100,7, че гражданите на ЕС ясно са поискали това по време на процеса на конференцията.",
   "extraInfoLink_LU": "Прочетете още",
   "extraInfoText_PL": "Лиутаурас Гудзинскас, професор по политически науки във Вилнюския университет, казва пред Žinių Radijas, че въпреки че предложението на Европейската комисия за укрепване на плурализма и независимостта на медиите и защитата им от политическа или бизнес намеса може да бъде полезен превантивен инструмент в много страни, вероятно е твърде късно за Унгария.",
   "extraInfoLink_PL": "Повече информация",
