--- a/static/languages/cs.json
+++ b/static/languages/cs.json
@@ -1,18 +1,18 @@
 {
-  "heading": "Výdaje na vzdělávání ve všech zemích EU",
-  "subheading": "Vládní výdaje na vojenskou obranu jako procento HDP v zemích Evropské unie v roce 2020",
+  "heading": "Jak hluboké jsou základní digitální dovednosti mezi občany ve věku 15–74 let ve všech zemích EU?",
+  "subheading": "V roce 2022 téměř 30 % zaměstnaných lidí v EU ve věku 15–74 let uvedlo, že používají digitální zařízení po celou nebo většinu své pracovní doby. Kromě toho 62 % dotázaných malých a středních podniků (malých a středních podniků) v roce 2023 odpovědělo v bleskovém Eurobarometru 529, že digitální dovednosti jsou pro jejich podnikání stále důležitější. Od roku 2023 má 56 % lidí v EU alespoň základní digitální dovednosti.",
   "legend1": "Nejsou k dispozici žádné údaje",
-  "tooltip1": "HDP",
+  "tooltip1": "mít základní digitální dovednosti",
   "textSourceDescription": "Zdroj",
   "textSource": "Eurostat",
   "textNoteDescription": "Poznámka",
-  "textNote": "Vládní výdaje podle funkce a typu COFOG (klasifikace funkcí vlády UNSD, replikovaná v ESA2010).",
+  "textNote": "Celkové digitální dovednosti se týkají pěti oblastí: informační a datová gramotnost, komunikační dovednosti a dovednosti spolupráce, dovednosti při vytváření digitálního obsahu, bezpečnostní dovednosti a dovednosti při řešení problémů. Aby lidé měli alespoň základní celkové digitální dovednosti, musí vědět, jak dělat alespoň jednu činnost související s každou oblastí.",
   "textDataAccess": "Přístup k datům",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=cs",
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=cs&category=t_isoc.t_isoc_sk",
   "textCountryClick": "Klikněte pro více informací",
-  "extraInfoText_BE": "Vzhledem k tomu, že potřeba jednomyslnosti způsobuje v mnoha oblastech byrokratické překážky, existuje určitá logika směřování k hlasování kvalifikovanou většinou tam, kde je to možné. V praxi kvalifikovaná většina znamená, že pro něco hlasuje 15 z 27 členských států, pokud dohromady představují více než 65 procent ze 450 milionů občanů EU.",
+  "extraInfoText_BE": "Vzhledem k tomu, že potřeba jednomyslnosti způsobuje v mnoha oblastech byrokratické překážky, existuje jistá logika směřování k hlasování kvalifikovanou většinou tam, kde je to možné. V praxi kvalifikovaná většina znamená, že pro něco hlasuje 15 z 27 členských států, pokud dohromady představují více než 65 procent ze 450 milionů občanů EU.",
   "extraInfoLink_BE": "Přečtěte si více",
-  "extraInfoText_DE": "Asi není náhoda, že o pouhé dva dny později Evropská komise oznámila, že konečně spustí mechanismus podmíněnosti, který spojuje vyplácení unijních fondů s dodržováním zásad právního státu. Budapešť čelí kritice kvůli omezování svobody médií, střetu zájmů a korupci.",
+  "extraInfoText_DE": "Asi není náhoda, že jen o dva dny později Evropská komise oznámila, že konečně spustí mechanismus podmíněnosti, který spojuje vyplácení unijních fondů s dodržováním zásad právního státu. Budapešť čelí kritice kvůli omezování svobody médií, střetu zájmů a korupci.",
   "extraInfoLink_DE": "Přečtěte si více",
   "extraInfoText_ES": "",
   "extraInfoLink_ES": "",
@@ -20,7 +20,7 @@
   "extraInfoLink_FR": "",
   "extraInfoText_IT": "Gašper Dovžan, státní tajemník slovinského ministerstva zahraničí a člen konferenčního výboru, říká, že Slovinsko se rozhodně nevyhýbá odvážným rozhodnutím ani neodmítá možnost posunu ke kvalifikované většině. Věří však, že stále existuje místo pro konsensuální rozhodování.",
   "extraInfoLink_IT": "Více informací",
-  "extraInfoText_LU": "Přesto je lucemburský europoslanec Marc Angel přesvědčen, že změny smluv jsou bezpodmínečně nutné – nejen proto, aby byly rozhodovací postupy méně těžkopádné, ale také proto, aby se rozšířila sféra působnosti EU. V rozhovoru pro lucemburskou národní vysílací stanici 100,7 tvrdí, že občané EU o to v průběhu konference jasně žádali.",
+  "extraInfoText_LU": "Přesto je lucemburský europoslanec Marc Angel přesvědčen, že změny smluv jsou bezpodmínečně nutné – nejen proto, aby byly rozhodovací postupy méně těžkopádné, ale také proto, aby se rozšířila sféra pravomocí EU. V rozhovoru pro lucemburskou národní vysílací stanici 100,7 tvrdí, že občané EU o to v průběhu konference jasně žádali.",
   "extraInfoLink_LU": "Přečtěte si více",
   "extraInfoText_PL": "Liutauras Gudzinskas, profesor politologie na univerzitě ve Vilniusu, říká Žinių Radijas, že ačkoli návrh Evropské komise na posílení plurality a nezávislosti médií a jejich ochranu před politickými nebo obchodními zásahy by mohl být v mnoha zemích užitečným preventivním nástrojem, je pravděpodobné, pro Maďarsko příliš pozdě.",
   "extraInfoLink_PL": "Více informací",
