--- a/static/languages/el.json
+++ b/static/languages/el.json
@@ -1,26 +1,26 @@
 {
-  "heading": "Αυξάνονται οι δαπάνες για την εκπαίδευση σε όλες τις χώρες της ΕΕ",
-  "subheading": "Δαπάνες γενικής κυβέρνησης για στρατιωτική άμυνα ως ποσοστό του ΑΕΠ στις χώρες της Ευρωπαϊκής Ένωσης το 2020",
+  "heading": "Πόσο βαθιές είναι οι βασικές ψηφιακές δεξιότητες μεταξύ των πολιτών ηλικίας 15-74 ετών σε όλες τις χώρες της ΕΕ;",
+  "subheading": "Το 2022, σχεδόν το 30 % των απασχολουμένων στην ΕΕ ηλικίας 15-74 ετών ανέφεραν ότι χρησιμοποιούν ψηφιακές συσκευές για ολόκληρο ή το μεγαλύτερο μέρος του χρόνου εργασίας τους. Επιπλέον, το 62% των ΜΜΕ που ερωτήθηκαν το 2023 (μικρές και μεσαίες επιχειρήσεις) απάντησαν στο Flash Ευρωβαρόμετρο 529 ότι οι ψηφιακές δεξιότητες γίνονται όλο και πιο σημαντικές για την επιχείρησή τους. Από το 2023, το 56% των πολιτών της ΕΕ έχουν τουλάχιστον βασικές ψηφιακές δεξιότητες.",
   "legend1": "Δεν υπάρχουν διαθέσιμα δεδομένα",
-  "tooltip1": "του ΑΕΠ",
+  "tooltip1": "έχουν βασικές ψηφιακές δεξιότητες",
   "textSourceDescription": "Πηγή",
   "textSource": "Eurostat",
   "textNoteDescription": "Σημείωση",
-  "textNote": "Κρατικές δαπάνες κατά COFOG (ταξινόμηση UNSD των λειτουργιών της κυβέρνησης, που αναπαράγεται στο ESA2010) λειτουργία και τύπος.",
+  "textNote": "Οι συνολικές ψηφιακές δεξιότητες αναφέρονται σε πέντε τομείς: δεξιότητες παιδείας πληροφοριών και δεδομένων, δεξιότητες επικοινωνίας και συνεργασίας, δεξιότητες δημιουργίας ψηφιακού περιεχομένου, δεξιότητες ασφάλειας και δεξιότητες επίλυσης προβλημάτων. Για να έχουν τουλάχιστον βασικές συνολικές ψηφιακές δεξιότητες, οι άνθρωποι πρέπει να γνωρίζουν πώς να κάνουν τουλάχιστον μία δραστηριότητα που σχετίζεται με κάθε τομέα.",
   "textDataAccess": "Πρόσβαση στα δεδομένα",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
   "textCountryClick": "Κάντε κλικ για περισσότερες πληροφορίες",
   "extraInfoText_BE": "Καθώς η ανάγκη για ομοφωνία προκαλεί γραφειοκρατική συμφόρηση σε πολλούς τομείς, υπάρχει μια ορισμένη λογική να προχωρήσουμε προς την ψηφοφορία με ειδική πλειοψηφία όπου είναι δυνατόν. Στην πράξη, ειδική πλειοψηφία είναι όταν 15 από τα 27 κράτη μέλη ψηφίζουν υπέρ κάτι, εφόσον μαζί αντιπροσωπεύουν περισσότερο από το 65 τοις εκατό των 450 εκατομμυρίων πολιτών της ΕΕ.",
   "extraInfoLink_BE": "Διαβάστε περισσότερα",
-  "extraInfoText_DE": "Πιθανώς δεν είναι τυχαίο ότι, μόλις δύο ημέρες αργότερα, η Ευρωπαϊκή Επιτροπή ανακοίνωσε ότι θα ενεργοποιούσε επιτέλους τον μηχανισμό όρων, ο οποίος συνδέει την πληρωμή των κονδυλίων της ΕΕ με τον σεβασμό του κράτους δικαίου. Η Βουδαπέστη δέχεται κριτική για περιορισμούς στην ελευθερία των μέσων ενημέρωσης, συγκρούσεις συμφερόντων και διαφθορά.",
+  "extraInfoText_DE": "Μάλλον δεν είναι τυχαίο ότι, μόλις δύο ημέρες αργότερα, η Ευρωπαϊκή Επιτροπή ανακοίνωσε ότι θα ενεργοποιούσε επιτέλους τον μηχανισμό των όρων, ο οποίος συνδέει την πληρωμή των κονδυλίων της ΕΕ με τον σεβασμό του κράτους δικαίου. Η Βουδαπέστη δέχεται κριτική για περιορισμούς στην ελευθερία των μέσων ενημέρωσης, συγκρούσεις συμφερόντων και διαφθορά.",
   "extraInfoLink_DE": "Διαβάστε περισσότερα",
   "extraInfoText_ES": "",
   "extraInfoLink_ES": "",
-  "extraInfoText_FR": "Στο πλαίσιο αυτό, η βουλγαρική κυβέρνηση έχει δημιουργήσει μια νέα μονάδα παρακολούθησης των μέσων ενημέρωσης. Η νέα μονάδα έχει σχεδιαστεί για να παρακολουθεί όλες τις μορφές μέσων ενημέρωσης για στοχευμένη παραπληροφόρηση, αλλά - σε αντίθεση με το ανεξάρτητο Συμβούλιο Ηλεκτρονικών Μέσων της χώρας - δεν έχει την εξουσία να ρυθμίζει ή να επιβάλλει κυρώσεις. Και ούτε πρέπει, τονίζει ο Μποζάνοφ σε συνέντευξή του στην Εθνική Ραδιοφωνία της Βουλγαρίας.",
+  "extraInfoText_FR": "Στο πλαίσιο αυτό, η βουλγαρική κυβέρνηση έχει δημιουργήσει μια νέα μονάδα παρακολούθησης των μέσων ενημέρωσης. Η νέα μονάδα έχει σχεδιαστεί για να παρακολουθεί όλες τις μορφές μέσων ενημέρωσης για στοχευμένη παραπληροφόρηση, αλλά – σε αντίθεση με το ανεξάρτητο Συμβούλιο Ηλεκτρονικών Μέσων της χώρας – δεν έχει την εξουσία να ρυθμίζει ή να επιβάλλει κυρώσεις. Και ούτε πρέπει, τονίζει ο Μποζάνοφ σε συνέντευξή του στην Εθνική Ραδιοφωνία της Βουλγαρίας.",
   "extraInfoLink_FR": "",
   "extraInfoText_IT": "Ο Gašper Dovžan, υφυπουργός στο Υπουργείο Εξωτερικών της Σλοβενίας και μέλος της επιτροπής της Διάσκεψης, λέει ότι η Σλοβενία σίγουρα δεν πτοείται από γενναίες αποφάσεις ούτε απορρίπτει την πιθανότητα κίνησης προς τις ειδικές πλειοψηφίες. Ωστόσο, πιστεύει ότι υπάρχει ακόμη χώρος για συναινετική λήψη αποφάσεων.",
   "extraInfoLink_IT": "Περισσότερες πληροφορίες",
-  "extraInfoText_LU": "Ωστόσο, ο Λουξεμβούργος ευρωβουλευτής Marc Angel είναι πεπεισμένος ότι οι αλλαγές στη Συνθήκη είναι απολύτως απαραίτητες – όχι μόνο για να καταστούν οι διαδικασίες λήψης αποφάσεων λιγότερο δυσκίνητες, αλλά και για να διευρυνθεί η σφαίρα αρμοδιοτήτων της ΕΕ. Ισχυρίζεται, σε συνέντευξή του στον εθνικό τηλεοπτικό σταθμό 100,7 του Λουξεμβούργου, ότι οι πολίτες της ΕΕ το ζήτησαν ξεκάθαρα κατά τη διαδικασία της Διάσκεψης.",
+  "extraInfoText_LU": "Ωστόσο, ο Λουξεμβούργος ευρωβουλευτής Marc Angel είναι πεπεισμένος ότι οι αλλαγές στη Συνθήκη είναι απολύτως απαραίτητες – όχι μόνο για να καταστούν οι διαδικασίες λήψης αποφάσεων λιγότερο δυσκίνητες, αλλά και για να διευρυνθεί η σφαίρα αρμοδιοτήτων της ΕΕ. Ισχυρίζεται, σε συνέντευξή του στον εθνικό ραδιοτηλεοπτικό σταθμό 100,7 του Λουξεμβούργου, ότι οι πολίτες της ΕΕ το ζήτησαν ξεκάθαρα κατά τη διαδικασία της Διάσκεψης.",
   "extraInfoLink_LU": "Διαβάστε περισσότερα",
   "extraInfoText_PL": "Ο Liutauras Gudzinskas, καθηγητής πολιτικών επιστημών στο Πανεπιστήμιο του Βίλνιους, λέει στον Žinių Radijas ότι παρόλο που η πρόταση της Ευρωπαϊκής Επιτροπής να ενισχύσει τον πλουραλισμό και την ανεξαρτησία των μέσων ενημέρωσης και να τα προστατεύσει από πολιτικές ή επιχειρηματικές παρεμβάσεις θα μπορούσε να είναι χρήσιμο προληπτικό εργαλείο σε πολλές χώρες, είναι πιθανό πολύ αργά για την Ουγγαρία.",
   "extraInfoLink_PL": "Περισσότερες πληροφορίες",
