--- a/static/languages/es.json
+++ b/static/languages/es.json
@@ -1,30 +1,30 @@
 {
-  "heading": "El gasto en educación aumenta en todos los países de la UE",
-  "subheading": "Gasto del gobierno general en defensa militar como porcentaje del PIB en países de la Unión Europea en 2020",
+  "heading": "¿Qué tan profundas son las habilidades digitales básicas entre los ciudadanos de entre 15 y 74 años en todos los países de la UE?",
+  "subheading": "En 2022, casi el 30 % de las personas empleadas en la UE de entre 15 y 74 años declararon utilizar dispositivos digitales durante la totalidad o la mayor parte de su tiempo de trabajo. Además, el 62 % de las pymes (pequeñas y medianas empresas) entrevistadas en 2023 respondieron en el Eurobarómetro Flash 529 que las habilidades digitales se han vuelto cada vez más importantes para sus negocios. En 2023, el 56 % de los habitantes de la UE tendrán al menos competencias digitales básicas.",
   "legend1": "Datos no disponibles",
-  "tooltip1": "del PIB",
+  "tooltip1": "tener habilidades digitales básicas",
   "textSourceDescription": "Fuente",
   "textSource": "Eurostat",
   "textNoteDescription": "Nota",
-  "textNote": "Gasto público por función y tipo de COFOG (clasificación de funciones de gobierno de la UNSD, replicada en ESA2010).",
+  "textNote": "Las habilidades digitales generales se refieren a cinco áreas: habilidades de alfabetización en información y datos, habilidades de comunicación y colaboración, habilidades de creación de contenido digital, habilidades de seguridad y habilidades de resolución de problemas. Para tener al menos habilidades digitales generales básicas, las personas deben saber realizar al menos una actividad relacionada con cada área.",
   "textDataAccess": "Accede a los datos",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
-  "textCountryClick": "Haga clic para obtener más información",
-  "extraInfoText_BE": "Dado que la necesidad de unanimidad provoca cuellos de botella burocráticos en muchas áreas, existe una cierta lógica para avanzar hacia la votación por mayoría cualificada siempre que sea posible. En la práctica, una mayoría calificada es cuando 15 de los 27 estados miembros votan a favor de algo, siempre que juntos representen más del 65 por ciento de los 450 millones de ciudadanos de la UE.",
-  "extraInfoLink_BE": "Lee mas",
-  "extraInfoText_DE": "Probablemente no sea casualidad que, solo dos días después, la Comisión Europea anunciara que finalmente activaría el mecanismo de condicionalidad, que vincula el pago de fondos de la UE al respeto del estado de derecho. Budapest se enfrenta a críticas por las restricciones a la libertad de prensa, los conflictos de intereses y la corrupción.",
-  "extraInfoLink_DE": "Lee mas",
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
+  "textCountryClick": "Haga clic para más información",
+  "extraInfoText_BE": "Dado que la necesidad de unanimidad provoca un cuello de botella burocrático en muchas áreas, existe cierta lógica para avanzar hacia la votación por mayoría cualificada siempre que sea posible. En la práctica, una mayoría cualificada es cuando 15 de los 27 Estados miembros votan a favor de algo, siempre que juntos representen a más del 65 por ciento de los 450 millones de ciudadanos de la UE.",
+  "extraInfoLink_BE": "Leer más",
+  "extraInfoText_DE": "Probablemente no sea coincidencia que, apenas dos días después, la Comisión Europea anunciara que finalmente activaría el mecanismo de condicionalidad, que vincula el pago de fondos de la UE al respeto del Estado de derecho. Budapest se enfrenta a críticas por restricciones a la libertad de prensa, conflictos de intereses y corrupción.",
+  "extraInfoLink_DE": "Leer más",
   "extraInfoText_ES": "",
   "extraInfoLink_ES": "",
-  "extraInfoText_FR": "En este contexto, el gobierno búlgaro ha creado una nueva unidad de seguimiento de los medios. La nueva unidad está diseñada para monitorear todas las formas de medios en busca de información errónea específica pero, a diferencia del Consejo de Medios Electrónicos independiente del país, no tiene el poder de regular o sancionar. Y tampoco debería, subraya Bozhanov en una entrevista con la Radio Nacional de Bulgaria.",
+  "extraInfoText_FR": "En este contexto, el gobierno búlgaro ha creado una nueva unidad de seguimiento de los medios de comunicación. La nueva unidad está diseñada para monitorear todas las formas de medios de comunicación en busca de información errónea específica pero, a diferencia del independiente Consejo de Medios Electrónicos del país, no tiene el poder de regular o sancionar. Y tampoco debería ser así, subraya Bozhanov en una entrevista con la Radio Nacional de Bulgaria.",
   "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Gašper Dovžan, secretario de Estado del Ministerio de Relaciones Exteriores de Eslovenia y miembro del comité de la Conferencia, dice que Eslovenia ciertamente no rehuye las decisiones valientes ni rechaza la posibilidad de avanzar hacia mayorías calificadas. Sin embargo, cree que todavía hay lugar para la toma de decisiones por consenso.",
+  "extraInfoText_IT": "Gašper Dovžan, secretario de Estado del Ministerio de Asuntos Exteriores de Eslovenia y miembro del comité de la Conferencia, dice que Eslovenia ciertamente no rehuye decisiones valientes ni rechaza la posibilidad de avanzar hacia mayorías cualificadas. Sin embargo, cree que todavía hay lugar para la toma de decisiones por consenso.",
   "extraInfoLink_IT": "Más información",
-  "extraInfoText_LU": "Sin embargo, el eurodiputado luxemburgués Marc Angel está convencido de que los cambios en los tratados son absolutamente necesarios, no solo para hacer que los procedimientos de toma de decisiones sean menos engorrosos, sino también para ampliar la esfera de competencia de la UE. Afirma, en una entrevista con la emisora nacional de Luxemburgo 100,7, que los ciudadanos de la UE claramente lo pidieron durante el proceso de la Conferencia.",
-  "extraInfoLink_LU": "Lee mas",
-  "extraInfoText_PL": "Liutauras Gudzinskas, profesor de ciencias políticas en la Universidad de Vilnius, le dice a Žinių Radijas que aunque la propuesta de la Comisión Europea para fortalecer el pluralismo y la independencia de los medios y protegerlos de la interferencia política o comercial podría ser una herramienta preventiva útil en muchos países, es probable que demasiado tarde para Hungría.",
+  "extraInfoText_LU": "Sin embargo, el eurodiputado luxemburgués Marc Angel está convencido de que es absolutamente necesario modificar los tratados, no sólo para hacer menos engorrosos los procedimientos de toma de decisiones, sino también para ampliar la esfera de competencia de la UE. Afirma, en una entrevista con la emisora nacional de Luxemburgo 100,7, que los ciudadanos de la UE claramente lo pidieron durante el proceso de la Conferencia.",
+  "extraInfoLink_LU": "Leer más",
+  "extraInfoText_PL": "Liutauras Gudzinskas, profesor de ciencias políticas en la Universidad de Vilnius, dice a Žinių Radijas que aunque la propuesta de la Comisión Europea para fortalecer el pluralismo y la independencia de los medios y protegerlos de la interferencia política o empresarial podría ser una herramienta preventiva útil en muchos países, es probable que demasiado tarde para Hungría.",
   "extraInfoLink_PL": "Más información",
-  "extraInfoText_RO": "Aunque el 3 de mayo es el Día Mundial de la Libertad de Prensa, Lituania celebra la libertad de prensa cada año el 7 de mayo, porque esta fecha marca el fin de la prohibición zarista de la publicación y distribución de libros en lituano.",
+  "extraInfoText_RO": "Aunque el 3 de mayo es el Día Mundial de la Libertad de Prensa, Lituania celebra la libertad de prensa cada año el 7 de mayo, porque esta fecha marca el fin de la prohibición zarista de publicar y distribuir libros en lituano.",
   "extraInfoLink_RO": "Mira esto",
   "extraInfoText_SE": "",
   "extraInfoLink_SE": ""
