--- a/static/languages/et.json
+++ b/static/languages/et.json
@@ -1,14 +1,14 @@
 {
-  "heading": "Hariduskulud suurenevad kõigis ELi riikides",
-  "subheading": "Valitsussektori kulutused sõjalisele kaitsele protsendina SKTst Euroopa Liidu riikides 2020. aastal",
+  "heading": "Kui sügavad on põhilised digioskused 15–74-aastaste kodanike seas kõigis ELi riikides?",
+  "subheading": "2022. aastal teatas ligi 30% ELi 15–74-aastastest töötavatest inimestest, et kasutasid digitaalseid seadmeid kogu või suurema osa oma tööajast. Lisaks vastas 62% 2023. aastal küsitletud VKEdest (väikesed ja keskmise suurusega ettevõtted) Eurobaromeetri kiiruuringus 529, et digitaalsed oskused on muutunud nende ettevõtte jaoks üha olulisemaks. 2023. aasta seisuga on 56%-l ELi inimestest vähemalt põhilised digioskused.",
   "legend1": "Andmed puuduvad",
-  "tooltip1": "SKTst",
+  "tooltip1": "omama elementaarseid digioskusi",
   "textSourceDescription": "Allikas",
   "textSource": "Eurostat",
   "textNoteDescription": "Märge",
-  "textNote": "Valitsemissektori kulud COFOG-i (UNSD klassifikatsioon valitsusfunktsioonide klassifikatsioonist, korratud ESA2010) funktsiooni ja tüübi järgi.",
+  "textNote": "Üldised digioskused hõlmavad viit valdkonda: teabe- ja andmepädevusoskused, suhtlemis- ja koostööoskused, digitaalse sisu loomise oskused, ohutusoskused ja probleemide lahendamise oskused. Et omada vähemalt elementaarseid üldisi digioskusi, peavad inimesed teadma, kuidas teha vähemalt ühte iga valdkonnaga seotud tegevust.",
   "textDataAccess": "Juurdepääs andmetele",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
   "textCountryClick": "Lisateabe saamiseks klõpsake",
   "extraInfoText_BE": "Kuna ühehäälsuse vajadus põhjustab paljudes valdkondades bürokraatlikku kitsaskohta, on teatud loogika liikuda võimaluse korral kvalifitseeritud häälteenamusega hääletamise suunas. Praktikas on kvalifitseeritud häälteenamus see, kui 15 liikmesriiki 27-st hääletavad millegi poolt, kui nad koos esindavad rohkem kui 65 protsenti ELi 450 miljonist kodanikust.",
   "extraInfoLink_BE": "Loe rohkem",
@@ -20,7 +20,7 @@
   "extraInfoLink_FR": "",
   "extraInfoText_IT": "Sloveenia välisministeeriumi riigisekretär ja konverentsikomisjoni liige Gašper Dovžan ütleb, et Sloveenia kindlasti ei kohku tagasi julgete otsuste ees ega lükka tagasi võimalust liikuda kvalifitseeritud häälteenamuse poole. Samas usub ta, et konsensuslikul otsustamisel on veel kohta.",
   "extraInfoLink_IT": "Rohkem infot",
-  "extraInfoText_LU": "Ometi on Luksemburgi parlamendiliige Marc Angel veendunud, et lepingumuudatused on hädavajalikud – mitte ainult selleks, et muuta otsustamismenetlused vähem kohmakaks, vaid ka selleks, et laiendada ELi pädevussfääri. Ta kinnitab intervjuus Luksemburgi rahvusringhäälingule 100,7, et ELi kodanikud küsisid seda konverentsi käigus selgelt.",
+  "extraInfoText_LU": "Ometi on Luksemburgi parlamendiliige Marc Angel veendunud, et lepingumuudatused on hädavajalikud – mitte ainult selleks, et muuta otsustamismenetlused vähem kohmakaks, vaid ka selleks, et laiendada ELi pädevusvaldkonda. Ta kinnitab intervjuus Luksemburgi rahvusringhäälingule 100,7, et ELi kodanikud küsisid seda konverentsi käigus selgelt.",
   "extraInfoLink_LU": "Loe rohkem",
   "extraInfoText_PL": "Vilniuse ülikooli politoloogiaprofessor Liutauras Gudzinskas ütleb Žinių Radijasele, et kuigi Euroopa Komisjoni ettepanek tugevdada meedia pluralismi ja sõltumatust ning kaitsta seda poliitiliste või äriliste sekkumiste eest võib olla kasulik ennetusvahend paljudes riikides, on see tõenäoline. Ungari jaoks liiga hilja.",
   "extraInfoLink_PL": "Rohkem informatsiooni",
