--- a/static/languages/ga.json
+++ b/static/languages/ga.json
@@ -1,16 +1,16 @@
 {
-  "heading": "Caiteachas oideachais suas ar fud gach tír AE",
-  "subheading": "Caiteachas an rialtais ghinearálta ar chosaint mhíleata mar chéatadán den OTI i dtíortha an Aontais Eorpaigh in 2020",
+  "heading": "Cé chomh domhain agus atá na bunscileanna digiteacha i measc saoránach 15-74 bliana d’aois ar fud gach tír AE?",
+  "subheading": "In 2022, thuairiscigh beagnach 30 % de dhaoine fostaithe san AE idir 15-74 bliana d’aois gur bhain siad úsáid as gléasanna digiteacha ar feadh iomlán nó ar feadh an chuid is mó dá gcuid ama oibre. Ina theannta sin d'fhreagair 62% de na FBManna a cuireadh faoi agallamh in 2023 (fiontair bheaga agus mheánmhéide) sa Flash Eorabharaiméadair 529 go bhfuil scileanna digiteacha ag éirí níos tábhachtaí dá ngnó. Amhail ó 2023, tá scileanna bunúsacha digiteacha ar a laghad ag 56 % de mhuintir an AE.",
   "legend1": "Níl aon sonraí ar fáil",
-  "tooltip1": "de OTI",
+  "tooltip1": "scileanna bunúsacha digiteacha a bheith agat",
   "textSourceDescription": "Foinse",
   "textSource": "Eurostat",
   "textNoteDescription": "Nóta",
-  "textNote": "Caiteachas rialtais de réir feidhme agus cineál COFOG (aicmiú UNSD ar fheidhmeanna an rialtais, arna mhacasamhlú in CCE2010).",
+  "textNote": "Tagraíonn scileanna digiteacha foriomlána do chúig réimse: scileanna litearthachta faisnéise agus sonraí, scileanna cumarsáide agus comhoibrithe, scileanna cruthú ábhair dhigitigh, scileanna sábháilteachta agus scileanna réitithe fadhbanna. Chun scileanna digiteacha bunúsacha foriomlána ar a laghad a bheith acu, ní mór go mbeadh a fhios ag daoine conas gníomhaíocht amháin ar a laghad a dhéanamh a bhaineann le gach réimse.",
   "textDataAccess": "Faigh rochtain ar na sonraí",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=ga",
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
   "textCountryClick": "Cliceáil le haghaidh tuilleadh eolais",
-  "extraInfoText_BE": "Ós rud é go bhfuil gá le haontoilíocht agus bac maorlathach ina lán réimsí, tá loighic áirithe ann chun bogadh i dtreo vótáil tromlaigh cháilithe nuair is féidir. Go praiticiúil, is éard atá i gceist le tromlach cáilithe nuair a vótálann 15 de na 27 mBallstát i bhfabhar rud éigin, chomh fada agus go seasann siad le chéile níos mó ná 65 faoin gcéad de 450 milliún saoránach an AE.",
+  "extraInfoText_BE": "Agus an gá atá le haontoilíocht ag cruthú bac maorlathach i go leor réimsí, tá loighic áirithe ann chun bogadh i dtreo vótáil tromlaigh cháilithe nuair is féidir. Go praiticiúil, is éard atá i gceist le tromlach cáilithe nuair a vótálann 15 de na 27 ballstát i bhfabhar rud éigin, chomh fada agus go seasann siad le chéile níos mó ná 65 faoin gcéad de 450 milliún saoránach an AE.",
   "extraInfoLink_BE": "Leigh Nios mo",
   "extraInfoText_DE": "Is dócha nach comhtharlú é, ach dhá lá ina dhiaidh sin, gur fhógair an Coimisiún Eorpach go mbeadh an sásra coinníollachta á chur i bhfeidhm ar deireadh, a nascann íocaíocht chistí an AE le hurraim don smacht reachta. Tá cáineadh i mBúdaipeist faoi shrianta ar shaoirse na meán, coinbhleachtaí leasa agus éilliú.",
   "extraInfoLink_DE": "Leigh Nios mo",
@@ -20,11 +20,11 @@
   "extraInfoLink_FR": "",
   "extraInfoText_IT": "Deir Gašper Dovžan, rúnaí stáit ag Aireacht Eachtrach na Slóivéine agus ball de choiste na Comhdhála, nach bhfuil an tSlóivéin cinnte ag cúlú ó chinntí cróga ná ag diúltú don fhéidearthacht bogadh i dtreo tromlaigh cháilithe. Mar sin féin, creideann sé go bhfuil áit ann fós do chinnteoireacht chomhthoil.",
   "extraInfoLink_IT": "Tuilleadh eolais",
-  "extraInfoText_LU": "Ach tá FPE Lucsamburgach Marc Angel cinnte go bhfuil fíor-riachtanach athruithe conartha – ní amháin chun nósanna imeachta cinnteoireachta a dhéanamh níos lú achrannaí, ach freisin chun raon inniúlachta an AE a leathnú. Dearbhaíonn sé, in agallamh leis an gcraoltóir náisiúnta Lucsamburg 100,7, gur iarr saoránaigh an AE é seo go soiléir le linn phróiseas na Comhdhála.",
+  "extraInfoText_LU": "Ach tá an FPE Lucsamburgach Marc Angel lánchinnte go bhfuil fíor-riachtanach athruithe conartha – ní amháin chun nósanna imeachta cinnteoireachta a dhéanamh níos deacra, ach freisin chun raon inniúlachta an AE a leathnú. Dearbhaíonn sé, in agallamh le craoltóir náisiúnta Lucsamburg 100,7, gur iarr saoránaigh an AE é seo go soiléir le linn phróiseas na Comhdhála.",
   "extraInfoLink_LU": "Leigh Nios mo",
   "extraInfoText_PL": "Insíonn Liutauras Gudzinskas, ollamh san eolaíocht pholaitiúil in Ollscoil Vilnius, do Žinių Radijas, cé go bhféadfadh togra an Choimisiúin Eorpaigh iolrachas agus neamhspleáchas na meán a neartú agus é a chosaint ó chur isteach polaitiúil nó gnó a bheith ina uirlis úsáideach coisctheach i go leor tíortha, is dócha. ró-dhéanach don Ungáir.",
   "extraInfoLink_PL": "Tuilleadh eolais",
-  "extraInfoText_RO": "Cé gurb é Lá Domhanda Saoirse an Phreasa é an 3 Bealtaine, ceiliúrann an Liotuáin saoirse an phreasa gach bliain ar an 7 Bealtaine – toisc gurb é an dáta seo deireadh le cosc an tsar ar fhoilsiú agus ar dháileadh leabhar sa Liotuáin.",
+  "extraInfoText_RO": "Cé gurb é Lá Domhanda Saoirse an Phreasa é an 3 Bealtaine, ceiliúrann an Liotuáin saoirse an phreasa gach bliain ar 7 Bealtaine – toisc gurb é an dáta seo deireadh le cosc an tsar ar fhoilsiú agus ar dháileadh leabhar sa Liotuáin.",
   "extraInfoLink_RO": "Seiceáil é seo",
   "extraInfoText_SE": "",
   "extraInfoLink_SE": ""
