--- a/static/languages/hr.json
+++ b/static/languages/hr.json
@@ -1,14 +1,14 @@
 {
-  "heading": "Rashodi za obrazovanje u svim zemljama EU-a",
-  "subheading": "Izdaci opće države za vojnu obranu kao postotak BDP-a u zemljama Europske unije u 2020.",
+  "heading": "Koliko su temeljne digitalne vještine među građanima u dobi od 15 do 74 godine u svim zemljama EU-a?",
+  "subheading": "Godine 2022. gotovo 30 % zaposlenih ljudi u EU-u u dobi od 15 do 74 godine izjavilo je da koristi digitalne uređaje tijekom cijelog ili veći dio svog radnog vremena. Nadalje, 62% intervjuiranih MSP-ova (mala i srednja poduzeća) u 2023. godini odgovorilo je u Flash Eurobarometru 529 da su digitalne vještine postale sve važnije za njihovo poslovanje. Od 2023. 56 % ljudi u EU-u ima barem osnovne digitalne vještine.",
   "legend1": "Nema dostupnih podataka",
-  "tooltip1": "BDP-a",
+  "tooltip1": "imaju osnovne digitalne vještine",
   "textSourceDescription": "Izvor",
   "textSource": "Eurostat",
   "textNoteDescription": "Bilješka",
-  "textNote": "Državni rashodi prema funkciji i vrsti COFOG-a (UNSD klasifikacija funkcija vlade, replicirana u ESA2010).",
+  "textNote": "Sveukupne digitalne vještine odnose se na pet područja: vještine informacijske i podatkovne pismenosti, vještine komunikacije i suradnje, vještine stvaranja digitalnog sadržaja, sigurnosne vještine i vještine rješavanja problema. Da bi imali barem osnovne digitalne vještine, ljudi moraju znati obavljati barem jednu aktivnost koja se odnosi na svako područje.",
   "textDataAccess": "Pristupite podacima",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
   "textCountryClick": "Kliknite za više informacija",
   "extraInfoText_BE": "Uz potrebu za jednoglasnošću koja uzrokuje birokratsko usko grlo u mnogim područjima, postoji određena logika za prelazak na glasovanje kvalificiranom većinom gdje je to moguće. U praksi, kvalificirana većina je kada 15 od 27 država članica glasa za nešto, sve dok zajedno predstavljaju više od 65 posto od 450 milijuna građana EU-a.",
   "extraInfoLink_BE": "Čitaj više",
