--- a/static/languages/it.json
+++ b/static/languages/it.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Quanto sono approfondite le competenze digitali di base tra i cittadini di età compresa tra i 15 e i 74 anni in tutti i paesi dell’UE?",
-  "subheading": "Nel 2022, quasi il 30% delle persone occupate nell’UE di età compresa tra 15 e 74 anni ha riferito di utilizzare dispositivi digitali per l’intero o la maggior parte del proprio orario di lavoro. Inoltre, nel Flash Eurobarometro 529, il 62% delle PMI (piccole e medie imprese) intervistate nel 2023 ha risposto che le competenze digitali sono diventate sempre più importanti per la loro attività. Nel 2023 il 56% dei cittadini dell’UE possiede almeno competenze digitali di base.",
+  "heading": "Quanto sono profonde le competenze digitali di base tra i cittadini di età compresa tra 15 e 74 anni in tutti i paesi dell'UE?",
+  "subheading": "Nel 2022, quasi il 30% degli occupati nell'UE di età compresa tra 15 e 74 anni ha dichiarato di utilizzare dispositivi digitali per l'intero o la maggior parte del proprio orario di lavoro. Inoltre, il 62% delle PMI (piccole e medie imprese) intervistate nel 2023 ha risposto al Flash Eurobarometro 529 che le competenze digitali sono diventate sempre più importanti per la propria attività. Nel 2023, il 56% della popolazione dell'UE possedeva almeno competenze digitali di base.",
   "legend1": "Nessun dato disponibile",
-  "tooltip1": "possedere competenze digitali di base",
+  "tooltip1": "avere competenze digitali di base",
   "textSourceDescription": "Fonte",
   "textSource": "Eurostat",
   "textNoteDescription": "Nota",
-  "textNote": "Le competenze digitali complessive si riferiscono a cinque aree: competenze di alfabetizzazione informatica e dei dati, capacità di comunicazione e collaborazione, capacità di creazione di contenuti digitali, competenze di sicurezza e capacità di risoluzione dei problemi. Per possedere almeno competenze digitali generali di base, le persone devono sapere come svolgere almeno un’attività relativa a ciascuna area.",
+  "textNote": "Le competenze digitali complessive si riferiscono a cinque aree: competenze di alfabetizzazione informatica e dei dati, competenze di comunicazione e collaborazione, competenze di creazione di contenuti digitali, competenze di sicurezza e capacità di problem solving. Per possedere almeno le competenze digitali complessive di base, le persone devono saper svolgere almeno un'attività correlata a ciascuna area.",
   "textDataAccess": "Accedi ai dati",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
-  "textCountryClick": "Fare clic per maggiori informazioni",
-  "extraInfoText_BE": "Dato che la necessità dell’unanimità causa un collo di bottiglia burocratico in molti settori, è logico procedere, ove possibile, verso il voto a maggioranza qualificata. In pratica, si parla di maggioranza qualificata quando 15 dei 27 Stati membri votano a favore di qualcosa, purché insieme rappresentino più del 65% dei 450 milioni di cittadini dell’UE.",
-  "extraInfoLink_BE": "Per saperne di più",
-  "extraInfoText_DE": "Probabilmente non è un caso che, appena due giorni dopo, la Commissione europea abbia annunciato che avrebbe finalmente attivato il meccanismo di condizionalità, che vincola il pagamento dei fondi UE al rispetto dello Stato di diritto. Budapest si trova ad affrontare critiche per le restrizioni alla libertà dei media, i conflitti di interessi e la corruzione.",
-  "extraInfoLink_DE": "Per saperne di più",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "In questo contesto, il governo bulgaro ha istituito una nuova unità di monitoraggio dei media. La nuova unità è progettata per monitorare tutte le forme di media alla ricerca di disinformazione mirata ma, a differenza del Consiglio indipendente per i media elettronici del paese, non ha il potere di regolamentare o sanzionare. E non dovrebbe nemmeno farlo, sottolinea Bozhanov in un'intervista alla radio nazionale bulgara.",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Gašper Dovžan, segretario di Stato del Ministero degli Esteri sloveno e membro del comitato della Conferenza, afferma che la Slovenia non si tira indietro davanti a decisioni coraggiose né rifiuta la possibilità di un passaggio verso maggioranze qualificate. Tuttavia, ritiene che ci sia ancora spazio per un processo decisionale consensuale.",
-  "extraInfoLink_IT": "Ulteriori informazioni",
-  "extraInfoText_LU": "Eppure l’eurodeputato lussemburghese Marc Angel è convinto che siano assolutamente necessarie modifiche al trattato, non solo per rendere le procedure decisionali meno complicate, ma anche per ampliare la sfera di competenza dell’UE. Egli afferma, in un’intervista all’emittente nazionale lussemburghese 100,7, che i cittadini dell’UE lo hanno chiaramente chiesto durante il processo della Conferenza.",
-  "extraInfoLink_LU": "Per saperne di più",
-  "extraInfoText_PL": "Liutauras Gudzinskas, professore di scienze politiche all'Università di Vilnius, dice a Žinių Radijas che, sebbene la proposta della Commissione europea di rafforzare il pluralismo e l'indipendenza dei media e di proteggerli dalle interferenze politiche o economiche possa essere un utile strumento preventivo in molti paesi, è probabile troppo tardi per l'Ungheria.",
-  "extraInfoLink_PL": "Maggiori informazioni",
-  "extraInfoText_RO": "Anche se il 3 maggio è la Giornata mondiale della libertà di stampa, la Lituania celebra la libertà di stampa ogni anno il 7 maggio, perché questa data segna la fine del divieto zarista sulla pubblicazione e distribuzione di libri in lituano.",
-  "extraInfoLink_RO": "Controllare questo",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Clicca per maggiori informazioni"
 }
