--- a/static/languages/pl.json
+++ b/static/languages/pl.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Jak głębokie są podstawowe umiejętności cyfrowe wśród obywateli w wieku 15–74 lat we wszystkich krajach UE?",
-  "subheading": "W 2022 r. prawie 30% osób zatrudnionych w UE w wieku 15–74 lat przyznało, że korzysta z urządzeń cyfrowych przez cały czas pracy lub przez jego większość. Ponadto 62 % MŚP (małych i średnich przedsiębiorstw), z którymi przeprowadzono wywiady w 2023 r., odpowiedziało w badaniu Flash Eurobarometr 529, że umiejętności cyfrowe stają się coraz ważniejsze dla ich przedsiębiorstw. Od 2023 r. 56% mieszkańców UE posiada co najmniej podstawowe umiejętności cyfrowe.",
+  "heading": "Jak zaawansowany jest poziom podstawowych umiejętności cyfrowych wśród obywateli UE w wieku 15–74 lat?",
+  "subheading": "W 2022 roku prawie 30% pracujących osób w UE w wieku 15–74 lat deklarowało korzystanie z urządzeń cyfrowych przez cały lub większość czasu pracy. Ponadto 62% ankietowanych MŚP (małych i średnich przedsiębiorstw) w 2023 roku odpowiedziało w badaniu Flash Eurobarometer 529, że umiejętności cyfrowe stają się coraz ważniejsze dla ich działalności. W 2023 roku 56% mieszkańców UE posiadało co najmniej podstawowe umiejętności cyfrowe.",
   "legend1": "Brak dostępnych danych",
   "tooltip1": "posiadać podstawowe umiejętności cyfrowe",
   "textSourceDescription": "Źródło",
   "textSource": "Eurostat",
   "textNoteDescription": "Notatka",
-  "textNote": "Ogólne umiejętności cyfrowe odnoszą się do pięciu obszarów: umiejętności korzystania z informacji i danych, umiejętności komunikacji i współpracy, umiejętności tworzenia treści cyfrowych, umiejętności w zakresie bezpieczeństwa i umiejętności rozwiązywania problemów. Aby posiadać przynajmniej podstawowe ogólne umiejętności cyfrowe, ludzie muszą wiedzieć, jak wykonać co najmniej jedno działanie związane z każdym obszarem.",
-  "textDataAccess": "Uzyskaj dostęp do danych",
+  "textNote": "Ogólne umiejętności cyfrowe odnoszą się do pięciu obszarów: umiejętności korzystania z informacji i danych, umiejętności komunikacji i współpracy, umiejętności tworzenia treści cyfrowych, umiejętności bezpieczeństwa oraz umiejętności rozwiązywania problemów. Aby posiadać przynajmniej podstawowe ogólne umiejętności cyfrowe, należy umieć wykonywać co najmniej jedną czynność związaną z każdym obszarem.",
+  "textDataAccess": "Dostęp do danych",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
-  "textCountryClick": "Kliknij, aby uzyskać więcej informacji",
-  "extraInfoText_BE": "Ponieważ potrzeba jednomyślności powoduje biurokratyczne wąskie gardło w wielu obszarach, istnieje pewna logika zmierzająca do głosowania większością kwalifikowaną, tam gdzie to możliwe. W praktyce większość kwalifikowana ma miejsce wtedy, gdy 15 z 27 państw członkowskich głosuje za czymś, pod warunkiem że łącznie reprezentują one ponad 65 procent z 450 milionów obywateli UE.",
-  "extraInfoLink_BE": "Czytaj więcej",
-  "extraInfoText_DE": "To chyba nie przypadek, że zaledwie dwa dni później Komisja Europejska ogłosiła, że w końcu uruchomi mechanizm warunkowości, który wiąże wypłatę środków unijnych z poszanowaniem praworządności. Budapeszt spotyka się z krytyką w związku z ograniczeniami wolności mediów, konfliktami interesów i korupcją.",
-  "extraInfoLink_DE": "Czytaj więcej",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "W tym kontekście rząd bułgarski powołał nową jednostkę monitorującą media. Nowa jednostka ma monitorować wszystkie formy mediów pod kątem ukierunkowanej dezinformacji, ale – w przeciwieństwie do niezależnej krajowej Rady ds. Mediów Elektronicznych – nie ma uprawnień do regulowania ani nakładania sankcji. I nie powinno, podkreśla Bozhanov w wywiadzie dla Bułgarskiego Radia Narodowego.",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Gašper Dovžan, sekretarz stanu w ministerstwie spraw zagranicznych Słowenii i członek komitetu Konferencji, twierdzi, że Słowenia z pewnością nie cofa się przed odważnymi decyzjami ani nie odrzuca możliwości przejścia w kierunku większości kwalifikowanej. Uważa jednak, że nadal jest miejsce na konsensus w podejmowaniu decyzji.",
-  "extraInfoLink_IT": "Więcej informacji",
-  "extraInfoText_LU": "Jednak luksemburski eurodeputowany Marc Angel jest przekonany, że zmiany traktatów są absolutnie potrzebne – nie tylko po to, aby uczynić procedury decyzyjne mniej uciążliwymi, ale także poszerzyć sferę kompetencji UE. W wywiadzie dla luksemburskiego nadawcy krajowego 100,7 zapewnia, że obywatele UE wyraźnie prosili o to podczas konferencji.",
-  "extraInfoLink_LU": "Czytaj więcej",
-  "extraInfoText_PL": "Liutauras Gudzinskas, profesor nauk politycznych na Uniwersytecie Wileńskim, mówi Žinių Radijasowi, że chociaż propozycja Komisji Europejskiej dotycząca wzmocnienia pluralizmu i niezależności mediów oraz ochrony ich przed ingerencjami politycznymi lub biznesowymi mogłaby być użytecznym narzędziem zapobiegawczym w wielu krajach, prawdopodobnie dla Węgier było już za późno.",
-  "extraInfoLink_PL": "Więcej informacji",
-  "extraInfoText_RO": "Choć 3 maja przypada Światowy Dzień Wolności Prasy, Litwa co roku świętuje wolność prasy 7 maja – ponieważ w tym dniu wygasa carski zakaz wydawania i rozpowszechniania książek w języku litewskim.",
-  "extraInfoLink_RO": "Sprawdź to",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Kliknij, aby uzyskać więcej informacji"
 }
