--- a/static/languages/ro.json
+++ b/static/languages/ro.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Cât de profunde sunt competențele digitale de bază ale cetățenilor cu vârsta între 15 și 74 de ani din toate țările UE?",
-  "subheading": "În 2022, aproape 30 % dintre angajații din UE cu vârsta cuprinsă între 15 și 74 de ani au declarat că au folosit dispozitive digitale pentru întregul timp de lucru sau cea mai mare parte. În plus, 62% dintre IMM-urile (întreprinderile mici și mijlocii) intervievate în 2023 au răspuns în Flash Eurobarometru 529 că competențele digitale au devenit din ce în ce mai importante pentru afacerea lor. Începând cu 2023, 56% dintre cetățenii UE au cel puțin competențe digitale de bază.",
-  "legend1": "Nici o informatie disponibila",
-  "tooltip1": "să aibă abilități digitale de bază",
+  "heading": "Cât de profunde sunt competențele digitale de bază în rândul cetățenilor cu vârsta cuprinsă între 15 și 74 de ani din toate țările UE?",
+  "subheading": "În 2022, aproape 30% dintre persoanele angajate din UE cu vârste cuprinse între 15 și 74 de ani au raportat că utilizează dispozitive digitale pe toată durata sau pe cea mai mare parte a timpului lor de lucru. În plus, 62% dintre IMM-urile (întreprinderile mici și mijlocii) intervievate în 2023 au răspuns în cadrul sondajului Eurobarometru Flash 529 că competențele digitale au devenit din ce în ce mai importante pentru afacerile lor. Începând cu 2023, 56% dintre cetățenii UE dețin cel puțin competențe digitale de bază.",
+  "legend1": "Nu sunt disponibile date",
+  "tooltip1": "au competențe digitale de bază",
   "textSourceDescription": "Sursă",
   "textSource": "Eurostat",
-  "textNoteDescription": "Notă",
-  "textNote": "Competențele digitale generale se referă la cinci domenii: abilități de informare și alfabetizare a datelor, abilități de comunicare și colaborare, abilități de creare de conținut digital, abilități de siguranță și abilități de rezolvare a problemelor. Pentru a avea cel puțin abilități digitale generale de bază, oamenii trebuie să știe să facă cel puțin o activitate legată de fiecare domeniu.",
+  "textNoteDescription": "Nota",
+  "textNote": "Competențele digitale generale se referă la cinci domenii: competențe informaționale și de date, abilități de comunicare și colaborare, abilități de creare de conținut digital, abilități de siguranță și abilități de rezolvare a problemelor. Pentru a avea cel puțin competențe digitale generale de bază, oamenii trebuie să știe cum să desfășoare cel puțin o activitate legată de fiecare domeniu.",
   "textDataAccess": "Accesați datele",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
-  "textCountryClick": "Click pentru mai multe informații",
-  "extraInfoText_BE": "Având în vedere că necesitatea unanimității provoacă un blocaj birocratic în multe domenii, există o anumită logică în a trece la votul cu majoritate calificată acolo unde este posibil. În practică, o majoritate calificată este atunci când 15 din cele 27 de state membre votează pentru ceva, atâta timp cât împreună reprezintă mai mult de 65% din cei 450 de milioane de cetățeni ai UE.",
-  "extraInfoLink_BE": "Citeşte mai mult",
-  "extraInfoText_DE": "Probabil nu este o coincidență că, la doar două zile mai târziu, Comisia Europeană a anunțat că va declanșa în sfârșit mecanismul de condiționalitate, care leagă plata fondurilor UE de respectarea statului de drept. Budapesta se confruntă cu critici din cauza restricțiilor asupra libertății presei, a conflictelor de interese și a corupției.",
-  "extraInfoLink_DE": "Citeşte mai mult",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "În acest context, guvernul bulgar a înființat o nouă unitate de monitorizare a media. Noua unitate este concepută pentru a monitoriza toate formele de mass-media pentru dezinformare țintită, dar – spre deosebire de Consiliul independent pentru Media Electronică din țară – nu are puterea de a reglementa sau sancționa. Și nici nu trebuie, subliniază Bozhanov într-un interviu la Radioul Național Bulgar.",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Gašper Dovžan, secretar de stat la Ministerul de Externe al Sloveniei și membru al comitetului Conferinței, spune că Slovenia nu se ferește cu siguranță de la decizii curajoase sau respinge posibilitatea unei mișcări către majorități calificate. Cu toate acestea, el consideră că mai este loc pentru luarea deciziilor prin consens.",
-  "extraInfoLink_IT": "Mai multe informatii",
-  "extraInfoText_LU": "Cu toate acestea, europarlamentarul luxemburghez Marc Angel este convins că modificările tratatelor sunt absolut necesare – nu numai pentru a face procedurile de luare a deciziilor mai puțin greoaie, ci și pentru a extinde sfera de competență a UE. El afirmă, într-un interviu acordat radiodifuzorului național din Luxemburg 100,7, că cetățenii UE au cerut clar acest lucru în timpul procesului conferinței.",
-  "extraInfoLink_LU": "Citeşte mai mult",
-  "extraInfoText_PL": "Liutauras Gudzinskas, profesor de științe politice la Universitatea din Vilnius, îi spune lui Žinių Radijas că, deși propunerea Comisiei Europene de a consolida pluralismul și independența mass-media și de a o proteja de interferențele politice sau de afaceri ar putea fi un instrument preventiv util în multe țări, este probabil că prea târziu pentru Ungaria.",
-  "extraInfoLink_PL": "Mai multe informatii",
-  "extraInfoText_RO": "Deși este Ziua Mondială a Libertății Presei pe 3 mai, Lituania sărbătorește libertatea presei în fiecare an la 7 mai – deoarece această dată marchează sfârșitul interdicției țariste privind publicarea și distribuirea cărților în lituaniană.",
-  "extraInfoLink_RO": "Verifica acest lucru",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=ro&category=t_isoc.t_isoc_sk",
+  "textCountryClick": "Faceți clic pentru mai multe informații"
 }
