--- a/static/languages/da.json
+++ b/static/languages/da.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Hvor dybtgående er de grundlæggende digitale færdigheder blandt 15-74-årige borgere i alle EU-lande?",
-  "subheading": "I 2022 rapporterede næsten 30 % af de beskæftigede i EU i alderen 15-74, at de brugte digitale enheder i hele eller det meste af deres arbejdstid. Desuden svarede 62 % af de i 2023 interviewede SMV'er (små og mellemstore virksomheder) i Flash Eurobarometer 529, at digitale færdigheder er blevet stadig vigtigere for deres virksomhed. Fra 2023 har 56 % af EU-befolkningen mindst grundlæggende digitale færdigheder.",
-  "legend1": "Ingen tilgængelig data",
-  "tooltip1": "har grundlæggende digitale færdigheder",
+  "heading": "Hvor dybdegående er de grundlæggende digitale færdigheder blandt 15-74-årige borgere i alle EU-lande?",
+  "subheading": "I 2022 rapporterede næsten 30 % af de beskæftigede i EU i alderen 15-74 år, at de brugte digitale enheder i hele eller det meste af deres arbejdstid. Desuden svarede 62 % af de adspurgte SMV'er (små og mellemstore virksomheder) i 2023 i Flash Eurobarometer 529, at digitale færdigheder er blevet stadig vigtigere for deres virksomhed. I 2023 havde 56 % af EU's befolkning mindst grundlæggende digitale færdigheder.",
+  "legend1": "Ingen data tilgængelige",
+  "tooltip1": "have grundlæggende digitale færdigheder",
   "textSourceDescription": "Kilde",
   "textSource": "Eurostat",
-  "textNoteDescription": "Bemærk",
-  "textNote": "Overordnede digitale færdigheder refererer til fem områder: informations- og datafærdigheder, kommunikations- og samarbejdsevner, færdigheder til at skabe digitalt indhold, sikkerhedsfærdigheder og problemløsningsevner. For at have mindst grundlæggende overordnede digitale færdigheder skal folk vide, hvordan man laver mindst én aktivitet relateret til hvert område.",
-  "textDataAccess": "Få adgang til data",
+  "textNoteDescription": "Note",
+  "textNote": "Overordnede digitale færdigheder refererer til fem områder: informations- og datakompetencer, kommunikations- og samarbejdsevner, færdigheder i at skabe digitalt indhold, sikkerhedsfærdigheder og problemløsningsevner. For at have mindst grundlæggende overordnede digitale færdigheder skal man vide, hvordan man udfører mindst én aktivitet relateret til hvert område.",
+  "textDataAccess": "Få adgang til dataene",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
-  "textCountryClick": "Klik for mere info",
-  "extraInfoText_BE": "Da behovet for enstemmighed forårsager en bureaukratisk flaskehals på mange områder, er der en vis logik i at gå hen imod afstemning med kvalificeret flertal, hvor det er muligt. I praksis er et kvalificeret flertal, når 15 af de 27 medlemslande stemmer for noget, så længe de tilsammen repræsenterer mere end 65 procent af EU’s 450 millioner borgere.",
-  "extraInfoLink_BE": "Læs mere",
-  "extraInfoText_DE": "Det er formentlig ikke tilfældigt, at EU-Kommissionen blot to dage senere meddelte, at den endelig ville udløse konditionalitetsmekanismen, som forbinder udbetalingen af EU-midler med respekten for retsstaten. Budapest er udsat for kritik over begrænsninger af mediefrihed, interessekonflikter og korruption.",
-  "extraInfoLink_DE": "Læs mere",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "I den forbindelse har den bulgarske regering oprettet en ny medieovervågningsenhed. Den nye enhed er designet til at overvåge alle former for medier for målrettet misinformation, men har – i modsætning til landets uafhængige råd for elektroniske medier – ikke magten til at regulere eller sanktionere. Og det burde det heller ikke, understreger Bozhanov i et bulgarsk National Radio-interview.",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Gašper Dovžan, statssekretær i Sloveniens udenrigsministerium og medlem af konferencekomitéen, siger, at Slovenien bestemt ikke viger tilbage for modige beslutninger eller afviser muligheden for et skridt mod kvalificeret flertal. Han mener dog, at der stadig er plads til konsensusbeslutninger.",
-  "extraInfoLink_IT": "Mere info",
-  "extraInfoText_LU": "Alligevel er den luxembourgske MEP Marc Angel overbevist om, at traktatændringer er absolut nødvendige - ikke kun for at gøre beslutningsprocedurerne mindre besværlige, men også for at udvide EU's kompetenceområde. Han hævder i et interview med Luxembourgs nationale tv-selskab 100,7, at EU-borgere tydeligt bad om dette under konferenceprocessen.",
-  "extraInfoLink_LU": "Læs mere",
-  "extraInfoText_PL": "Liutauras Gudzinskas, professor i statskundskab ved Vilnius Universitet, siger til Žinių Radijas, at selvom Europa-Kommissionens forslag om at styrke mediernes pluralisme og uafhængighed og beskytte dem mod politisk eller erhvervsmæssig indblanding kan være et nyttigt forebyggende værktøj i mange lande, er det sandsynligt. for sent for Ungarn.",
-  "extraInfoLink_PL": "Mere information",
-  "extraInfoText_RO": "Selvom det er verdens pressefrihedsdag den 3. maj, fejrer Litauen pressefriheden hvert år den 7. maj – fordi denne dato markerer afslutningen på det zaristiske forbud mod udgivelse og distribution af bøger på litauisk.",
-  "extraInfoLink_RO": "Tjek det her",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Klik for mere information"
 }
