--- a/static/languages/de.json
+++ b/static/languages/de.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Wie ausgeprägt sind die grundlegenden digitalen Kompetenzen der 15- bis 74-jährigen Bürger in allen EU-Ländern?",
-  "subheading": "Im Jahr 2022 gaben fast 30 % der Erwerbstätigen in der EU im Alter zwischen 15 und 74 Jahren an, während ihrer gesamten oder den größten Teil ihrer Arbeitszeit digitale Geräte zu verwenden. Darüber hinaus antworteten 62 % der im Jahr 2023 befragten KMU (kleine und mittlere Unternehmen) im Flash Eurobarometer 529, dass digitale Kompetenzen für ihr Unternehmen zunehmend wichtiger geworden seien. Im Jahr 2023 verfügen 56 % der EU-Bürger zumindest über grundlegende digitale Kompetenzen.",
+  "heading": "Wie ausgeprägt sind die digitalen Grundkenntnisse der 15- bis 74-jährigen Bürger in allen EU-Ländern?",
+  "subheading": "Im Jahr 2022 gaben fast 30 % der Erwerbstätigen in der EU im Alter von 15 bis 74 Jahren an, während ihrer gesamten oder eines Großteils ihrer Arbeitszeit digitale Geräte zu nutzen. Darüber hinaus antworteten 62 % der im Jahr 2023 befragten KMU (kleine und mittlere Unternehmen) im Flash Eurobarometer 529, dass digitale Kompetenzen für ihr Unternehmen zunehmend wichtiger geworden seien. Im Jahr 2023 verfügten 56 % der EU-Bürger zumindest über grundlegende digitale Kompetenzen.",
   "legend1": "Keine Daten verfügbar",
   "tooltip1": "verfügen über grundlegende digitale Fähigkeiten",
   "textSourceDescription": "Quelle",
   "textSource": "Eurostat",
   "textNoteDescription": "Notiz",
-  "textNote": "Allgemeine digitale Kompetenzen beziehen sich auf fünf Bereiche: Informations- und Datenkompetenz, Kommunikations- und Kollaborationskompetenz, Kompetenzen zur Erstellung digitaler Inhalte, Sicherheitskompetenzen und Problemlösungskompetenzen. Um zumindest grundlegende allgemeine digitale Kompetenzen zu besitzen, müssen die Menschen mindestens eine Aktivität in jedem Bereich beherrschen.",
+  "textNote": "Digitale Kompetenzen umfassen fünf Bereiche: Informations- und Datenkompetenz, Kommunikations- und Kollaborationskompetenz, Kompetenzen zur Erstellung digitaler Inhalte, Sicherheitskompetenzen und Problemlösungskompetenzen. Um zumindest über grundlegende digitale Kompetenzen zu verfügen, müssen die Teilnehmer mindestens eine Aktivität aus jedem Bereich beherrschen.",
   "textDataAccess": "Zugriff auf die Daten",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
-  "textCountryClick": "Klicken Sie hier für weitere Informationen",
-  "extraInfoText_BE": "Da die erforderliche Einstimmigkeit in vielen Bereichen zu bürokratischen Engpässen führt, ist es logisch, wenn möglich auf die qualifizierte Mehrheit umzusteigen. In der Praxis liegt eine qualifizierte Mehrheit vor, wenn 15 der 27 Mitgliedstaaten für etwas stimmen, sofern sie zusammen mehr als 65 Prozent der 450 Millionen EU-Bürger repräsentieren.",
-  "extraInfoLink_BE": "Mehr lesen",
-  "extraInfoText_DE": "Es ist wohl kein Zufall, dass die EU-Kommission nur zwei Tage später ankündigte, sie werde endlich den Konditionalitätsmechanismus aktivieren, der die Auszahlung von EU-Geldern an die Einhaltung der Rechtsstaatlichkeit knüpft. Budapest sieht sich wegen Einschränkungen der Medienfreiheit, Interessenkonflikten und Korruption in der Kritik.",
-  "extraInfoLink_DE": "Mehr lesen",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "In diesem Zusammenhang hat die bulgarische Regierung eine neue Medienüberwachungseinheit eingerichtet. Die neue Einheit soll alle Medienformen auf gezielte Falschinformationen überwachen, hat aber – anders als der unabhängige Rat für elektronische Medien des Landes – keine Regulierungs- oder Sanktionsbefugnis. Und das sollte sie auch nicht, betont Bozhanov in einem Interview mit dem bulgarischen Nationalradio.",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Gašper Dovžan, Staatssekretär im slowenischen Außenministerium und Mitglied des Konferenzausschusses, sagt, Slowenien scheue sich keineswegs vor mutigen Entscheidungen und lehne auch die Möglichkeit eines Übergangs zu qualifizierten Mehrheiten nicht ab. Er glaubt jedoch, dass es nach wie vor Raum für Konsensentscheidungen gebe.",
-  "extraInfoLink_IT": "Mehr Info",
-  "extraInfoText_LU": "Der luxemburgische Europaabgeordnete Marc Angel ist jedoch überzeugt, dass Vertragsänderungen absolut notwendig sind – nicht nur, um die Entscheidungsverfahren weniger umständlich zu machen, sondern auch, um den Kompetenzbereich der EU zu erweitern. In einem Interview mit dem luxemburgischen nationalen Rundfunk 100,7 behauptete er, die EU-Bürger hätten dies während des Konferenzprozesses deutlich gefordert.",
-  "extraInfoLink_LU": "Mehr lesen",
-  "extraInfoText_PL": "Liutauras Gudzinskas, Professor für Politikwissenschaft an der Universität Vilnius, erklärt gegenüber Žinių Radijas, dass der Vorschlag der Europäischen Kommission, den Pluralismus und die Unabhängigkeit der Medien zu stärken und sie vor politischer oder geschäftlicher Einflussnahme zu schützen, zwar in vielen Ländern ein nützliches Präventivinstrument sein könnte, für Ungarn jedoch wahrscheinlich zu spät kommt.",
-  "extraInfoLink_PL": "Mehr Informationen",
-  "extraInfoText_RO": "Obwohl am 3. Mai der Welttag der Pressefreiheit ist, feiert Litauen die Pressefreiheit jedes Jahr am 7. Mai. Denn dieses Datum markiert das Ende des zaristischen Verbots der Veröffentlichung und Verbreitung litauischer Bücher.",
-  "extraInfoLink_RO": "Überprüfen Sie dies",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Klicken Sie hier für weitere Informationen"
 }
