--- a/static/languages/fi.json
+++ b/static/languages/fi.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Kuinka syvällisiä digitaaliset perustaidot ovat 15–74-vuotiaiden kansalaisten keskuudessa kaikissa EU-maissa?",
-  "subheading": "Vuonna 2022 lähes 30 prosenttia EU:n 15–74-vuotiaista työllisistä ilmoitti käyttävänsä digitaalisia laitteita koko tai suurimman osan työajastaan. Lisäksi 62 prosenttia vuonna 2023 haastatelluista pk-yrityksistä (pienet ja keskisuuret yritykset) vastasi Flash Eurobarometer 529 -tutkimuksessa, että digitaaliset taidot ovat tulleet yhä tärkeämmiksi heidän liiketoiminnassaan. Vuodesta 2023 lähtien 56 prosentilla EU:n ihmisistä on vähintään digitaaliset perustaidot.",
-  "legend1": "Tietoja ei ole saatavilla",
-  "tooltip1": "sinulla on perusdigitaalitaidot",
+  "heading": "Kuinka syvällisiä digitaaliset perustaidot ovat 15–74-vuotiailla kansalaisilla kaikissa EU-maissa?",
+  "subheading": "Vuonna 2022 lähes 30 % EU:n 15–74-vuotiaista työssäkäyvistä ilmoitti käyttävänsä digitaalisia laitteita koko tai suurimman osan työajastaan. Lisäksi 62 % vuonna 2023 haastatelluista pk-yrityksistä (pienistä ja keskisuurista yrityksistä) vastasi Flash Eurobarometer 529 -tutkimuksessa, että digitaalisista taidoista on tullut yhä tärkeämpiä heidän liiketoiminnassaan. Vuonna 2023 56 %:lla EU:n väestöstä on ainakin digitaaliset perustaidot.",
+  "legend1": "Ei tietoja saatavilla",
+  "tooltip1": "hallitsee digitaaliset perustaidot",
   "textSourceDescription": "Lähde",
   "textSource": "Eurostat",
   "textNoteDescription": "Huomautus",
-  "textNote": "Digitaaliset taidot kattavat viisi aluetta: tieto- ja datalukutaidot, viestintä- ja yhteistyötaidot, digitaalisen sisällön luontitaidot, turvallisuustaidot ja ongelmanratkaisutaidot. Jotta ihmisillä olisi vähintään perusdigitaaliset taidot, ihmisten on osattava tehdä vähintään yksi kullekin osa-alueelle liittyvä toiminta.",
+  "textNote": "Yleiset digitaaliset taidot voidaan jakaa viiteen osa-alueeseen: tiedon- ja datalukutaito, viestintä- ja yhteistyötaidot, digitaalisen sisällön luomistaidot, turvallisuustaidot ja ongelmanratkaisutaidot. Jotta ihmisten olisivat vähintään perustason digitaaliset taidot, heidän on tiedettävä, miten tehdä vähintään yksi kuhunkin osa-alueeseen liittyvä toiminto.",
   "textDataAccess": "Käytä tietoja",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
-  "textCountryClick": "Napsauta saadaksesi lisätietoja",
-  "extraInfoText_BE": "Koska yksimielisyyden tarve aiheuttaa byrokraattisen pullonkaulan monilla aloilla, on tietty logiikka siirtyä kohti määräenemmistöäänestystä mahdollisuuksien mukaan. Käytännössä määräenemmistö on, kun 15 jäsenvaltiosta 27:stä äänestää jonkin asian puolesta, kunhan ne yhdessä edustavat yli 65 prosenttia EU:n 450 miljoonasta kansalaisesta.",
-  "extraInfoLink_BE": "Lue lisää",
-  "extraInfoText_DE": "Ei luultavasti ole sattumaa, että Euroopan komissio ilmoitti vain kaksi päivää myöhemmin ottavansa vihdoin käyttöön ehdollisuusmekanismin, joka yhdistää EU:n varojen maksamisen oikeusvaltioperiaatteen noudattamiseen. Budapestia arvostellaan tiedotusvälineiden vapauden rajoituksista, eturistiriidoista ja korruptiosta.",
-  "extraInfoLink_DE": "Lue lisää",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "Tässä yhteydessä Bulgarian hallitus on perustanut uuden tiedotusvälineiden seurantayksikön. Uusi yksikkö on suunniteltu tarkkailemaan kaikenlaista tiedotusvälinettä kohdistetun väärän tiedon varalta, mutta sillä ei ole – toisin kuin maan riippumaton sähköisen viestinnän neuvosto – valtaa säännellä tai sanktioida. Eikä sen pitäisikään olla, Bozhanov korostaa Bulgarian kansallisradion haastattelussa.",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Slovenian ulkoministeriön valtiosihteeri ja konferenssikomitean jäsen Gašper Dovžan sanoo, että Slovenia ei todellakaan pelkää rohkeita päätöksiä tai hylkää mahdollisuutta siirtyä kohti määräenemmistöä. Hän uskoo kuitenkin, että yksimieliselle päätöksenteolle on vielä tilaa.",
-  "extraInfoLink_IT": "Lisätietoja",
-  "extraInfoText_LU": "Luxemburgilainen Euroopan parlamentin jäsen Marc Angel on kuitenkin vakuuttunut siitä, että perussopimusten muutokset ovat ehdottoman välttämättömiä – ei pelkästään päätöksentekomenettelyjen vähentämiseksi, vaan myös EU:n toimivallan laajentamiseksi. Hän väittää Luxemburgin kansallisen yleisradioyhtiön 100,7:n haastattelussa, että EU:n kansalaiset pyysivät tätä selvästi konferenssiprosessin aikana.",
-  "extraInfoLink_LU": "Lue lisää",
-  "extraInfoText_PL": "Vilnan yliopiston valtiotieteen professori Liutauras Gudzinskas kertoo Žinių Radijasille, että vaikka Euroopan komission ehdotus tiedotusvälineiden moniarvoisuuden ja riippumattomuuden vahvistamisesta ja sen suojelemisesta poliittiselta tai liiketoiminnalta voisi olla hyödyllinen ehkäisevä väline monissa maissa, se on todennäköistä. liian myöhäistä Unkarille.",
-  "extraInfoLink_PL": "Lisää tietoa",
-  "extraInfoText_RO": "Vaikka on Maailman lehdistönvapauden päivä 3. toukokuuta, Liettuassa juhlitaan lehdistönvapautta joka vuosi 7. toukokuuta, koska tämä päivämäärä merkitsee tsaarin liettualaisten kirjojen julkaisemista ja jakelua koskevan kiellon päättymistä.",
-  "extraInfoLink_RO": "Tarkista tämä",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Klikkaa saadaksesi lisätietoja"
 }
