--- a/static/languages/fr.json
+++ b/static/languages/fr.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Quel est le niveau de compétences numériques de base des citoyens âgés de 15 à 74 ans dans tous les pays de l’UE ?",
-  "subheading": "En 2022, près de 30 % des salariés de l’UE âgés de 15 à 74 ans ont déclaré utiliser des appareils numériques pendant la totalité ou la majeure partie de leur temps de travail. En outre, 62 % des PME (petites et moyennes entreprises) interrogées en 2023 ont répondu dans l'Eurobaromètre Flash 529 que les compétences numériques sont devenues de plus en plus importantes pour leur entreprise. En 2023, 56 % des citoyens de l’UE possèdent au moins des compétences numériques de base.",
-  "legend1": "Pas de données disponibles",
+  "heading": "Dans quelle mesure les citoyens âgés de 15 à 74 ans possèdent-ils des compétences numériques de base dans tous les pays de l’UE ?",
+  "subheading": "En 2022, près de 30 % des salariés de l'UE âgés de 15 à 74 ans déclaraient utiliser des appareils numériques pendant la totalité ou la majeure partie de leur temps de travail. Par ailleurs, 62 % des PME interrogées en 2023 ont répondu, dans le Flash Eurobaromètre 529, que les compétences numériques étaient devenues de plus en plus importantes pour leur activité. En 2023, 56 % des citoyens de l'UE possédaient au moins des compétences numériques de base.",
+  "legend1": "Aucune donnée disponible",
   "tooltip1": "avoir des compétences numériques de base",
   "textSourceDescription": "Source",
   "textSource": "Eurostat",
   "textNoteDescription": "Note",
-  "textNote": "Les compétences numériques globales font référence à cinq domaines : les compétences en matière d'information et de données, les compétences en communication et en collaboration, les compétences en création de contenu numérique, les compétences en matière de sécurité et les compétences en résolution de problèmes. Pour avoir au moins des compétences numériques globales de base, les gens doivent savoir réaliser au moins une activité liée à chaque domaine.",
+  "textNote": "Les compétences numériques globales englobent cinq domaines : la maîtrise de l'information et des données, la communication et la collaboration, la création de contenu numérique, la sécurité et la résolution de problèmes. Pour posséder au moins des compétences numériques globales de base, il est nécessaire de savoir réaliser au moins une activité liée à chaque domaine.",
   "textDataAccess": "Accéder aux données",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
-  "textCountryClick": "Cliquez pour plus d'informations",
-  "extraInfoText_BE": "La nécessité de l'unanimité entraînant un goulot d'étranglement bureaucratique dans de nombreux domaines, il est logique de s'orienter vers le vote à la majorité qualifiée lorsque cela est possible. En pratique, on parle de majorité qualifiée lorsque 15 des 27 États membres votent en faveur de quelque chose, à condition qu’ils représentent ensemble plus de 65 pour cent des 450 millions de citoyens de l’UE.",
-  "extraInfoLink_BE": "En savoir plus",
-  "extraInfoText_DE": "Ce n’est probablement pas un hasard si, deux jours plus tard, la Commission européenne a annoncé qu’elle déclencherait enfin le mécanisme de conditionnalité, qui lie le versement des fonds européens au respect de l’État de droit. Budapest fait face à des critiques concernant les restrictions à la liberté des médias, les conflits d'intérêts et la corruption.",
-  "extraInfoLink_DE": "En savoir plus",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "Dans ce contexte, le gouvernement bulgare a mis en place une nouvelle unité de surveillance des médias. La nouvelle unité est conçue pour surveiller toutes les formes de médias à la recherche de désinformation ciblée mais – contrairement au Conseil indépendant des médias électroniques du pays – n’a pas le pouvoir de réglementer ou de sanctionner. Et cela ne devrait pas non plus être le cas, souligne Bozhanov dans une interview à la radio nationale bulgare.",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Gašper Dovžan, secrétaire d'État au ministère des Affaires étrangères de Slovénie et membre de la commission de la Conférence, affirme que la Slovénie ne recule certainement pas devant des décisions courageuses et ne rejette pas la possibilité d'une évolution vers des majorités qualifiées. Cependant, il estime qu’il est encore possible de prendre des décisions par consensus.",
-  "extraInfoLink_IT": "Plus d'informations",
-  "extraInfoText_LU": "Pourtant, l’eurodéputé luxembourgeois Marc Angel est convaincu que des modifications du traité sont absolument nécessaires – non seulement pour alléger les procédures décisionnelles, mais aussi pour élargir la sphère de compétence de l’UE. Il affirme, dans une interview accordée à la chaîne nationale luxembourgeoise 100,7, que les citoyens de l’UE l’ont clairement demandé lors du processus de la Conférence.",
-  "extraInfoLink_LU": "En savoir plus",
-  "extraInfoText_PL": "Liutauras Gudzinskas, professeur de sciences politiques à l'Université de Vilnius, a déclaré à Žinių Radijas que même si la proposition de la Commission européenne visant à renforcer le pluralisme et l'indépendance des médias et à les protéger contre les ingérences politiques ou commerciales pourrait être un outil préventif utile dans de nombreux pays, elle est probable trop tard pour la Hongrie.",
-  "extraInfoLink_PL": "Plus d'information",
-  "extraInfoText_RO": "Bien que le 3 mai soit la Journée mondiale de la liberté de la presse, la Lituanie célèbre chaque année la liberté de la presse le 7 mai – car cette date marque la fin de l'interdiction tsariste de publier et de distribuer des livres en lituanien.",
-  "extraInfoLink_RO": "Vérifie ça",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=fr&category=t_isoc.t_isoc_sk",
+  "textCountryClick": "Cliquez pour plus d'informations"
 }
