--- a/static/languages/hr.json
+++ b/static/languages/hr.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Koliko su temeljne digitalne vještine među građanima u dobi od 15 do 74 godine u svim zemljama EU-a?",
-  "subheading": "Godine 2022. gotovo 30 % zaposlenih ljudi u EU-u u dobi od 15 do 74 godine izjavilo je da koristi digitalne uređaje tijekom cijelog ili veći dio svog radnog vremena. Nadalje, 62% intervjuiranih MSP-ova (mala i srednja poduzeća) u 2023. godini odgovorilo je u Flash Eurobarometru 529 da su digitalne vještine postale sve važnije za njihovo poslovanje. Od 2023. 56 % ljudi u EU-u ima barem osnovne digitalne vještine.",
+  "heading": "Koliko su razvijene osnovne digitalne vještine među građanima u dobi od 15 do 74 godine u svim zemljama EU-a?",
+  "subheading": "U 2022. godini gotovo 30 % zaposlenih osoba u EU u dobi od 15 do 74 godine izjavilo je da koriste digitalne uređaje cijelo ili većinu svog radnog vremena. Nadalje, 62 % intervjuiranih malih i srednjih poduzeća (MSP) u 2023. godini odgovorilo je u Flash Eurobarometru 529 da su digitalne vještine postale sve važnije za njihovo poslovanje. Od 2023. godine 56 % stanovnika EU ima barem osnovne digitalne vještine.",
   "legend1": "Nema dostupnih podataka",
   "tooltip1": "imaju osnovne digitalne vještine",
   "textSourceDescription": "Izvor",
   "textSource": "Eurostat",
   "textNoteDescription": "Bilješka",
-  "textNote": "Sveukupne digitalne vještine odnose se na pet područja: vještine informacijske i podatkovne pismenosti, vještine komunikacije i suradnje, vještine stvaranja digitalnog sadržaja, sigurnosne vještine i vještine rješavanja problema. Da bi imali barem osnovne digitalne vještine, ljudi moraju znati obavljati barem jednu aktivnost koja se odnosi na svako područje.",
-  "textDataAccess": "Pristupite podacima",
+  "textNote": "Ukupne digitalne vještine odnose se na pet područja: vještine informacijske i podatkovne pismenosti, komunikacijske vještine i vještine suradnje, vještine stvaranja digitalnog sadržaja, sigurnosne vještine i vještine rješavanja problema. Da bi imali barem osnovne ukupne digitalne vještine, ljudi moraju znati kako obaviti barem jednu aktivnost povezanu sa svakim područjem.",
+  "textDataAccess": "Pristup podacima",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
-  "textCountryClick": "Kliknite za više informacija",
-  "extraInfoText_BE": "Uz potrebu za jednoglasnošću koja uzrokuje birokratsko usko grlo u mnogim područjima, postoji određena logika za prelazak na glasovanje kvalificiranom većinom gdje je to moguće. U praksi, kvalificirana većina je kada 15 od 27 država članica glasa za nešto, sve dok zajedno predstavljaju više od 65 posto od 450 milijuna građana EU-a.",
-  "extraInfoLink_BE": "Čitaj više",
-  "extraInfoText_DE": "Vjerojatno nije slučajno da je samo dva dana kasnije Europska komisija najavila da će konačno pokrenuti mehanizam uvjetovanja koji isplatu EU sredstava povezuje s poštivanjem vladavine prava. Budimpešta se suočava s kritikama zbog ograničenja slobode medija, sukoba interesa i korupcije.",
-  "extraInfoLink_DE": "Čitaj više",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "U tom je kontekstu bugarska vlada uspostavila novu jedinicu za praćenje medija. Nova jedinica osmišljena je za praćenje svih oblika medija radi ciljanih dezinformacija, ali – za razliku od državnog neovisnog Vijeća za elektroničke medije – nema ovlasti regulirati ili sankcionirati. A niti bi trebalo, naglašava Bozhanov u intervjuu Bugarskom nacionalnom radiju.",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Gašper Dovžan, državni tajnik u slovenskom ministarstvu vanjskih poslova i član odbora Konferencije, kaže da Slovenija svakako ne bježi od hrabrih odluka niti odbacuje mogućnost pomaka prema kvalificiranoj većini. Ipak, smatra da ipak ima mjesta za konsenzusno odlučivanje.",
-  "extraInfoLink_IT": "Više informacija",
-  "extraInfoText_LU": "Ipak, luksemburški zastupnik u Europskom parlamentu Marc Angel uvjeren je da su izmjene ugovora apsolutno potrebne – ne samo kako bi procedure donošenja odluka bile manje glomazne, već i kako bi se proširila sfera nadležnosti EU-a. Tvrdi, u intervjuu za luksemburšku nacionalnu radioteleviziju 100,7, da su građani EU-a to jasno tražili tijekom procesa konferencije.",
-  "extraInfoLink_LU": "Čitaj više",
-  "extraInfoText_PL": "Liutauras Gudzinskas, profesor političkih znanosti na Sveučilištu u Vilniusu, kaže za Žinių Radijas da iako bi prijedlog Europske komisije za jačanje pluralizma i neovisnosti medija i njihovu zaštitu od političkog ili poslovnog uplitanja mogao biti koristan preventivni alat u mnogim zemljama, vjerojatno je prekasno za Mađarsku.",
-  "extraInfoLink_PL": "Više informacija",
-  "extraInfoText_RO": "Iako je 3. svibnja Svjetski dan slobode medija, Litva svake godine 7. svibnja slavi slobodu tiska – jer taj datum označava kraj carske zabrane izdavanja i distribucije knjiga na litavskom.",
-  "extraInfoLink_RO": "Provjeri ovo",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Kliknite za više informacija"
 }
