--- a/static/languages/lv.json
+++ b/static/languages/lv.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Cik dziļas digitālās pamatprasmes ir 15–74 gadus veciem pilsoņiem visās ES valstīs?",
-  "subheading": "2022. gadā gandrīz 30 % ES nodarbināto cilvēku vecumā no 15 līdz 74 gadiem ziņoja, ka izmanto digitālās ierīces visu savu darba laiku vai lielāko daļu sava darba laika. Turklāt 62 % 2023. gadā aptaujāto MVU (mazie un vidējie uzņēmumi) zibatmiņā Eirobarometra 529 atbildēja, ka digitālās prasmes viņu uzņēmējdarbībā ir kļuvušas arvien svarīgākas. 2023. gadā 56 % ES iedzīvotāju ir vismaz pamata digitālās prasmes.",
-  "legend1": "Nav pieejami dati",
+  "heading": "Cik padziļinātas ir digitālās pamatprasmes 15–74 gadus veciem iedzīvotājiem visās ES valstīs?",
+  "subheading": "2022. gadā gandrīz 30 % ES nodarbināto iedzīvotāju vecumā no 15 līdz 74 gadiem ziņoja, ka visu vai lielāko daļu sava darba laika izmanto digitālās ierīces. Turklāt 62 % no 2023. gadā aptaujātajiem MVU (mazajiem un vidējiem uzņēmumiem) Flash Eurobarometer 529 aptaujā atbildēja, ka digitālās prasmes kļūst arvien svarīgākas viņu uzņēmējdarbībā. 2023. gadā 56 % ES iedzīvotāju ir vismaz pamata digitālās prasmes.",
+  "legend1": "Dati nav pieejami",
   "tooltip1": "ir pamata digitālās prasmes",
   "textSourceDescription": "Avots",
   "textSource": "Eurostat",
   "textNoteDescription": "Piezīme",
-  "textNote": "Kopējās digitālās prasmes attiecas uz piecām jomām: informācijas un datu pratības prasmes, komunikācijas un sadarbības prasmes, digitālā satura veidošanas prasmes, drošības prasmes un problēmu risināšanas prasmes. Lai cilvēkiem būtu vismaz pamata vispārējās digitālās prasmes, cilvēkiem ir jāzina, kā veikt vismaz vienu darbību, kas saistīta ar katru jomu.",
+  "textNote": "Kopējās digitālās prasmes attiecas uz piecām jomām: informācijas un datu pratības prasmes, komunikācijas un sadarbības prasmes, digitālā satura veidošanas prasmes, drošības prasmes un problēmu risināšanas prasmes. Lai iegūtu vismaz pamata vispārējās digitālās prasmes, cilvēkiem ir jāzina, kā veikt vismaz vienu darbību, kas saistīta ar katru jomu.",
   "textDataAccess": "Piekļūstiet datiem",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
-  "textCountryClick": "Noklikšķiniet, lai iegūtu vairāk informācijas",
-  "extraInfoText_BE": "Tā kā vajadzība pēc vienprātības daudzās jomās rada birokrātiskus šķēršļus, pastāv zināma loģika, lai pēc iespējas pārietu uz kvalificētu balsu vairākumu. Praksē kvalificēts vairākums ir tad, kad 15 no 27 dalībvalstīm balso par kaut ko, ja vien tās kopā pārstāv vairāk nekā 65 procentus no 450 miljoniem ES pilsoņu.",
-  "extraInfoLink_BE": "Lasīt vairāk",
-  "extraInfoText_DE": "Iespējams, tā nav nejaušība, ka tikai divas dienas vēlāk Eiropas Komisija paziņoja, ka beidzot iedarbinās nosacītības mehānismu, kas saista ES fondu maksājumus ar tiesiskuma ievērošanu. Budapešta tiek kritizēta par mediju brīvības ierobežojumiem, interešu konfliktiem un korupciju.",
-  "extraInfoLink_DE": "Lasīt vairāk",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "Šajā kontekstā Bulgārijas valdība ir izveidojusi jaunu plašsaziņas līdzekļu uzraudzības vienību. Jaunā vienība ir paredzēta visu veidu plašsaziņas līdzekļu mērķtiecīgas dezinformācijas uzraudzībai, taču atšķirībā no valsts neatkarīgās Elektronisko plašsaziņas līdzekļu padomes tai nav tiesību regulēt vai sodīt. Un arī nevajadzētu, Bulgārijas Nacionālā radio intervijā uzsver Božanovs.",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Slovēnijas Ārlietu ministrijas valsts sekretārs un konferences komitejas loceklis Gašpers Dovžans norāda, ka Slovēnija noteikti nevairās no drosmīgiem lēmumiem vai noraida iespēju virzīties uz kvalificētu vairākumu. Tomēr viņš uzskata, ka vēl ir vieta vienprātīgai lēmumu pieņemšanai.",
-  "extraInfoLink_IT": "Vairāk informācijas",
-  "extraInfoText_LU": "Tomēr Luksemburgas EP deputāts Marks Anhels ir pārliecināts, ka līguma izmaiņas ir absolūti nepieciešamas – ne tikai lai padarītu lēmumu pieņemšanas procedūras mazāk apgrūtinošas, bet arī lai paplašinātu ES kompetences sfēru. Viņš intervijā Luksemburgas nacionālajai raidorganizācijai 100,7 apgalvo, ka ES pilsoņi to skaidri prasīja konferences procesa laikā.",
-  "extraInfoLink_LU": "Lasīt vairāk",
-  "extraInfoText_PL": "Viļņas Universitātes politikas zinātnes profesors Liutaurs Gudzinskas žurnālam Žinių Radijas stāsta, ka, lai gan Eiropas Komisijas priekšlikums stiprināt plašsaziņas līdzekļu plurālismu un neatkarību un aizsargāt tos no politiskas vai biznesa iejaukšanās varētu būt noderīgs preventīvs līdzeklis daudzās valstīs, tomēr visticamāk Ungārijai par vēlu.",
-  "extraInfoLink_PL": "Vairāk informācijas",
-  "extraInfoText_RO": "Lai gan 3. maijā tiek atzīmēta Pasaules preses brīvības diena, Lietuva preses brīvību katru gadu atzīmē 7. maijā, jo ar šo datumu beidzas cara laika aizliegums izdot un izplatīt grāmatas lietuviešu valodā.",
-  "extraInfoLink_RO": "Pārbaudi šo",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Noklikšķiniet, lai iegūtu plašāku informāciju"
 }
