--- a/static/languages/nl.json
+++ b/static/languages/nl.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Hoe diepgaand zijn de digitale basisvaardigheden van burgers van 15 tot 74 jaar in alle EU-landen?",
-  "subheading": "In 2022 gaf bijna 30 % van de werkende mensen in de EU tussen 15 en 74 jaar aan dat zij gedurende de gehele of het grootste deel van hun werktijd digitale apparaten gebruikten. Bovendien antwoordde 62% van de in 2023 geïnterviewde kmo’s (kleine en middelgrote ondernemingen) in de Flash Eurobarometer 529 dat digitale vaardigheden steeds belangrijker zijn geworden voor hun bedrijf. Vanaf 2023 beschikt 56% van de EU-bevolking over ten minste digitale basisvaardigheden.",
+  "heading": "Hoe diepgaand zijn de digitale basisvaardigheden van burgers tussen 15 en 74 jaar in alle EU-landen?",
+  "subheading": "In 2022 gaf bijna 30% van de werkenden in de EU van 15 tot 74 jaar aan dat ze digitale apparaten gedurende hun gehele of het grootste deel van hun werktijd gebruikten. Bovendien gaf 62% van de in 2023 ondervraagde mkb'ers (kleine en middelgrote ondernemingen) in de Flash Eurobarometer 529 aan dat digitale vaardigheden steeds belangrijker zijn geworden voor hun bedrijf. In 2023 beschikte 56% van de EU-burgers over ten minste basisvaardigheden op digitaal gebied.",
   "legend1": "Geen gegevens beschikbaar",
-  "tooltip1": "beschikt over digitale basisvaardigheden",
+  "tooltip1": "beschikken over basis digitale vaardigheden",
   "textSourceDescription": "Bron",
   "textSource": "Eurostat",
   "textNoteDescription": "Opmerking",
-  "textNote": "Over het geheel genomen hebben digitale vaardigheden betrekking op vijf gebieden: informatie- en datageletterdheid, communicatie- en samenwerkingsvaardigheden, vaardigheden voor het creëren van digitale inhoud, veiligheidsvaardigheden en probleemoplossende vaardigheden. Om ten minste over algemene digitale basisvaardigheden te beschikken, moeten mensen weten hoe ze ten minste één activiteit met betrekking tot elk gebied moeten uitvoeren.",
+  "textNote": "Algemene digitale vaardigheden hebben betrekking op vijf gebieden: informatie- en datageletterdheid, communicatie- en samenwerkingsvaardigheden, vaardigheden voor het creëren van digitale content, veiligheidsvaardigheden en probleemoplossend vermogen. Om ten minste over basisvaardigheden te beschikken, moeten mensen minstens één activiteit kunnen uitvoeren die verband houdt met elk gebied.",
   "textDataAccess": "Toegang tot de gegevens",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
-  "textCountryClick": "Klik voor meer informatie",
-  "extraInfoText_BE": "Omdat de behoefte aan unanimiteit op veel gebieden een bureaucratisch knelpunt veroorzaakt, schuilt er een zekere logica achter het streven naar stemming met gekwalificeerde meerderheid, waar mogelijk. In de praktijk is er sprake van een gekwalificeerde meerderheid als 15 van de 27 lidstaten vóór iets stemmen, zolang ze samen meer dan 65 procent van de 450 miljoen burgers van de EU vertegenwoordigen.",
-  "extraInfoLink_BE": "Lees verder",
-  "extraInfoText_DE": "Het is waarschijnlijk geen toeval dat de Europese Commissie slechts twee dagen later aankondigde dat zij eindelijk het conditionaliteitsmechanisme in werking zou stellen, dat de betaling van EU-fondsen koppelt aan respect voor de rechtsstaat. Boedapest krijgt te maken met kritiek vanwege de beperkingen van de mediavrijheid, belangenconflicten en corruptie.",
-  "extraInfoLink_DE": "Lees verder",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "In deze context heeft de Bulgaarse regering een nieuwe mediamonitoringeenheid opgericht. De nieuwe eenheid is ontworpen om alle vormen van media te controleren op gerichte desinformatie, maar heeft – in tegenstelling tot de onafhankelijke Raad voor Elektronische Media van het land – niet de macht om te reguleren of te bestraffen. En dat zou ook niet moeten, benadrukt Bozhanov in een interview op de Bulgaarse Nationale Radio.",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Gašper Dovžan, staatssecretaris van het Sloveense ministerie van Buitenlandse Zaken en lid van de Conferentiecommissie, zegt dat Slovenië moedige beslissingen zeker niet schuwt en de mogelijkheid van een stap in de richting van gekwalificeerde meerderheden niet afwijst. Hij is echter van mening dat er nog steeds ruimte is voor consensusbesluitvorming.",
-  "extraInfoLink_IT": "Meer informatie",
-  "extraInfoText_LU": "Toch is het Luxemburgse EP-lid Marc Angel ervan overtuigd dat verdragswijzigingen absoluut noodzakelijk zijn – niet alleen om de besluitvormingsprocedures minder omslachtig te maken, maar ook om de bevoegdheden van de EU te verbreden. Hij stelt in een interview met de Luxemburgse nationale omroep 100,7 dat EU-burgers hier tijdens het conferentieproces duidelijk om hebben gevraagd.",
-  "extraInfoLink_LU": "Lees verder",
-  "extraInfoText_PL": "Liutauras Gudzinskas, hoogleraar politieke wetenschappen aan de Universiteit van Vilnius, vertelt Žinių Radijas dat hoewel het voorstel van de Europese Commissie om het pluralisme en de onafhankelijkheid van de media te versterken en deze te beschermen tegen politieke of zakelijke inmenging in veel landen een nuttig preventief instrument zou kunnen zijn, het waarschijnlijk is dat te laat voor Hongarije.",
-  "extraInfoLink_PL": "Meer informatie",
-  "extraInfoText_RO": "Hoewel het op 3 mei Werelddag van de Persvrijheid is, viert Litouwen elk jaar op 7 mei de persvrijheid – omdat deze datum het einde markeert van het tsaristische verbod op de publicatie en distributie van boeken in het Litouws.",
-  "extraInfoLink_RO": "Check dit",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Klik voor meer informatie"
 }
