--- a/static/languages/pt.json
+++ b/static/languages/pt.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Quão profundas são as competências digitais básicas entre os cidadãos com idades compreendidas entre os 15 e os 74 anos em todos os países da UE?",
-  "subheading": "Em 2022, quase 30% das pessoas empregadas na UE com idades compreendidas entre os 15 e os 74 anos declararam utilizar dispositivos digitais durante todo ou a maior parte do seu tempo de trabalho. Além disso, 62% das PME (pequenas e médias empresas) entrevistadas em 2023 responderam no Flash Eurobarómetro 529 que as competências digitais se tornaram cada vez mais importantes para os seus negócios. Em 2023, 56% da população da UE possuía pelo menos competências digitais básicas.",
-  "legend1": "Não há dados disponíveis",
+  "heading": "Quão profundas são as habilidades digitais básicas entre cidadãos de 15 a 74 anos em todos os países da UE?",
+  "subheading": "Em 2022, quase 30% dos trabalhadores na UE com idades entre 15 e 74 anos relataram utilizar dispositivos digitais durante todo ou a maior parte do seu tempo de trabalho. Além disso, 62% das PMEs (pequenas e médias empresas) entrevistadas em 2023 responderam no Flash Eurobarometer 529 que as competências digitais se tornaram cada vez mais importantes para os seus negócios. Em 2023, 56% dos cidadãos da UE possuíam pelo menos competências digitais básicas.",
+  "legend1": "Nenhum dado disponível",
   "tooltip1": "ter habilidades digitais básicas",
   "textSourceDescription": "Fonte",
   "textSource": "Eurostat",
   "textNoteDescription": "Observação",
-  "textNote": "As competências digitais globais referem-se a cinco áreas: competências de literacia de informação e dados, competências de comunicação e colaboração, competências de criação de conteúdos digitais, competências de segurança e competências de resolução de problemas. Para ter pelo menos competências digitais gerais básicas, as pessoas devem saber realizar pelo menos uma atividade relacionada com cada área.",
+  "textNote": "Habilidades digitais gerais referem-se a cinco áreas: habilidades de informação e alfabetização de dados, habilidades de comunicação e colaboração, habilidades de criação de conteúdo digital, habilidades de segurança e habilidades de resolução de problemas. Para ter pelo menos habilidades digitais gerais básicas, as pessoas devem saber realizar pelo menos uma atividade relacionada a cada área.",
   "textDataAccess": "Acesse os dados",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
-  "textCountryClick": "Clique para mais informações",
-  "extraInfoText_BE": "Com a necessidade de unanimidade a causar estrangulamentos burocráticos em muitas áreas, existe uma certa lógica em avançar para a votação por maioria qualificada sempre que possível. Na prática, uma maioria qualificada ocorre quando 15 dos 27 Estados-Membros votam a favor de algo, desde que juntos representem mais de 65 por cento dos 450 milhões de cidadãos da UE.",
-  "extraInfoLink_BE": "Consulte Mais informação",
-  "extraInfoText_DE": "Provavelmente não é coincidência que, apenas dois dias depois, a Comissão Europeia tenha anunciado que iria finalmente acionar o mecanismo de condicionalidade, que liga o pagamento de fundos da UE ao respeito pelo Estado de direito. Budapeste enfrenta críticas devido às restrições à liberdade dos meios de comunicação social, aos conflitos de interesses e à corrupção.",
-  "extraInfoLink_DE": "Consulte Mais informação",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "Neste contexto, o governo búlgaro criou uma nova unidade de monitorização dos meios de comunicação social. A nova unidade foi concebida para monitorizar todas as formas de meios de comunicação social em busca de desinformação direcionada, mas – ao contrário do Conselho independente para os Meios de Comunicação Eletrónicos do país – não tem o poder de regulamentar ou sancionar. E nem deveria, sublinha Bozhanov numa entrevista à Rádio Nacional Búlgara.",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Gašper Dovžan, secretário de Estado do Ministério dos Negócios Estrangeiros da Eslovénia e membro do comité da Conferência, afirma que a Eslovénia não se esquiva certamente de decisões corajosas nem rejeita a possibilidade de uma transição para maiorias qualificadas. No entanto, ele acredita que ainda há lugar para a tomada de decisões por consenso.",
-  "extraInfoLink_IT": "Mais informações",
-  "extraInfoText_LU": "No entanto, o eurodeputado luxemburguês Marc Angel está convencido de que são absolutamente necessárias alterações ao Tratado – não só para tornar os procedimentos de tomada de decisão menos complicados, mas também para alargar a esfera de competência da UE. Ele afirma, numa entrevista à emissora nacional luxemburguesa 100,7, que os cidadãos da UE pediram claramente isto durante o processo da Conferência.",
-  "extraInfoLink_LU": "Consulte Mais informação",
-  "extraInfoText_PL": "Liutauras Gudzinskas, professor de ciências políticas na Universidade de Vilnius, disse a Žinių Radijas que, embora a proposta da Comissão Europeia para reforçar o pluralismo e a independência dos meios de comunicação social e protegê-los de interferências políticas ou empresariais possa ser uma ferramenta preventiva útil em muitos países, é provável que tarde demais para a Hungria.",
-  "extraInfoLink_PL": "Mais Informações",
-  "extraInfoText_RO": "Embora seja o Dia Mundial da Liberdade de Imprensa a 3 de Maio, a Lituânia celebra a liberdade de imprensa todos os anos a 7 de Maio – porque esta data marca o fim da proibição czarista à publicação e distribuição de livros em lituano.",
-  "extraInfoLink_RO": "Verifique isso",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Clique para mais informações"
 }
