--- a/static/languages/sk.json
+++ b/static/languages/sk.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Aké hlboké sú základné digitálne zručnosti medzi občanmi vo veku 15 – 74 rokov vo všetkých krajinách EÚ?",
-  "subheading": "V roku 2022 takmer 30 % zamestnaných ľudí v EÚ vo veku 15 – 74 rokov uviedlo, že celý alebo väčšinu svojho pracovného času používajú digitálne zariadenia. Okrem toho 62 % opýtaných MSP (malé a stredné podniky) v roku 2023 odpovedalo v bleskovom Eurobarometri 529, že digitálne zručnosti sú pre ich podnikanie čoraz dôležitejšie. Od roku 2023 má 56 % ľudí v EÚ aspoň základné digitálne zručnosti.",
+  "heading": "Aké rozsiahle sú základné digitálne zručnosti občanov vo veku 15 – 74 rokov vo všetkých krajinách EÚ?",
+  "subheading": "V roku 2022 takmer 30 % zamestnaných ľudí v EÚ vo veku 15 – 74 rokov uviedlo, že používa digitálne zariadenia počas celého alebo väčšiny svojho pracovného času. Okrem toho 62 % opýtaných malých a stredných podnikov (MSP) v roku 2023 v prieskume Flash Eurobarometer 529 odpovedalo, že digitálne zručnosti sú pre ich podnikanie čoraz dôležitejšie. V roku 2023 malo 56 % obyvateľov EÚ aspoň základné digitálne zručnosti.",
   "legend1": "Nie sú k dispozícii žiadne údaje",
   "tooltip1": "mať základné digitálne zručnosti",
   "textSourceDescription": "Zdroj",
   "textSource": "Eurostat",
   "textNoteDescription": "Poznámka",
-  "textNote": "Celkové digitálne zručnosti sa týkajú piatich oblastí: informačná a dátová gramotnosť, komunikačné a kolaboračné zručnosti, zručnosti pri tvorbe digitálneho obsahu, bezpečnostné zručnosti a zručnosti pri riešení problémov. Aby mali ľudia aspoň základné celkové digitálne zručnosti, musia vedieť robiť aspoň jednu činnosť súvisiacu s každou oblasťou.",
+  "textNote": "Celkové digitálne zručnosti sa vzťahujú na päť oblastí: zručnosti v oblasti informačných a dátových zručností, komunikačné a kolaboratívne zručnosti, zručnosti v oblasti tvorby digitálneho obsahu, bezpečnostné zručnosti a zručnosti v oblasti riešenia problémov. Aby ľudia mali aspoň základné celkové digitálne zručnosti, musia vedieť, ako vykonávať aspoň jednu činnosť súvisiacu s každou oblasťou.",
   "textDataAccess": "Prístup k údajom",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
-  "textCountryClick": "Kliknite pre viac informácií",
-  "extraInfoText_BE": "Keďže potreba jednomyseľnosti spôsobuje v mnohých oblastiach byrokratickú prekážku, existuje určitá logika smerovania k hlasovaniu kvalifikovanou väčšinou tam, kde je to možné. V praxi kvalifikovaná väčšina znamená, že za niečo hlasuje 15 z 27 členských štátov, pokiaľ spolu predstavujú viac ako 65 percent zo 450 miliónov občanov EÚ.",
-  "extraInfoLink_BE": "Čítaj viac",
-  "extraInfoText_DE": "Asi nie je náhoda, že len o dva dni neskôr Európska komisia oznámila, že konečne spustí mechanizmus podmienenosti, ktorý spája vyplácanie eurofondov s dodržiavaním zásad právneho štátu. Budapešť čelí kritike za obmedzovanie slobody médií, konflikty záujmov a korupciu.",
-  "extraInfoLink_DE": "Čítaj viac",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "V tejto súvislosti bulharská vláda zriadila novú jednotku monitorovania médií. Nová jednotka je navrhnutá tak, aby monitorovala všetky formy médií z hľadiska cielených dezinformácií, ale – na rozdiel od nezávislej Rady pre elektronické médiá v krajine – nemá právomoc regulovať alebo sankcionovať. A ani by nemalo, zdôrazňuje Bozhanov v rozhovore pre bulharský národný rozhlas.",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Štátny tajomník slovinského ministerstva zahraničia a člen konferenčného výboru Gašper Dovžan hovorí, že Slovinsko sa rozhodne nevyhýba odvážnym rozhodnutiam ani neodmieta možnosť posunu ku kvalifikovanej väčšine. Verí však, že stále existuje priestor na konsenzusné rozhodovanie.",
-  "extraInfoLink_IT": "Viac informácií",
-  "extraInfoText_LU": "Luxemburský europoslanec Marc Angel je však presvedčený, že zmeny v zmluve sú absolútne nevyhnutné – nielen preto, aby boli rozhodovacie postupy menej ťažkopádne, ale aj preto, aby sa rozšírila sféra kompetencií EÚ. V rozhovore pre luxemburskú národnú vysielaciu stanicu 100,7 tvrdí, že občania EÚ to počas konferencie jasne žiadali.",
-  "extraInfoLink_LU": "Čítaj viac",
-  "extraInfoText_PL": "Liutauras Gudzinskas, profesor politických vied na univerzite vo Vilniuse, hovorí Žinių Radijas, že hoci návrh Európskej komisie posilniť pluralitu a nezávislosť médií a chrániť ich pred politickými alebo obchodnými zásahmi by mohol byť užitočným preventívnym nástrojom v mnohých krajinách, je pravdepodobné, pre Maďarsko neskoro.",
-  "extraInfoLink_PL": "Viac informácií",
-  "extraInfoText_RO": "Hoci je Svetový deň slobody tlače 3. mája, Litva oslavuje slobodu tlače každý rok 7. mája – pretože tento dátum znamená koniec cárskeho zákazu vydávania a distribúcie kníh v litovčine.",
-  "extraInfoLink_RO": "Skontroluj to",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Kliknite pre viac informácií"
 }
