--- a/static/languages/sl.json
+++ b/static/languages/sl.json
@@ -1,31 +1,13 @@
 {
   "heading": "Kako poglobljene so osnovne digitalne spretnosti med državljani, starimi od 15 do 74 let, v vseh državah EU?",
-  "subheading": "Leta 2022 je skoraj 30 % zaposlenih ljudi v EU, starih od 15 do 74 let, poročalo, da uporabljajo digitalne naprave ves ali večji del svojega delovnega časa. Poleg tega je 62 % leta 2023 intervjuvanih MSP (mala in srednja podjetja) v raziskavi Flash Eurobarometer 529 odgovorilo, da postajajo digitalne veščine vse bolj pomembne za njihovo poslovanje. Od leta 2023 ima 56 % ljudi v EU vsaj osnovne digitalne spretnosti.",
-  "legend1": "Ni podatkov",
-  "tooltip1": "imajo osnovna digitalna znanja",
+  "subheading": "Leta 2022 je skoraj 30 % zaposlenih v EU, starih od 15 do 74 let, poročalo, da digitalne naprave uporabljajo ves ali večino svojega delovnega časa. Poleg tega je 62 % anketiranih malih in srednje velikih podjetij (MSP) iz leta 2023 v raziskavi Flash Eurobarometer 529 odgovorilo, da so digitalne veščine vse pomembnejše za njihovo poslovanje. Leta 2023 je imelo 56 % prebivalcev EU vsaj osnovne digitalne veščine.",
+  "legend1": "Ni na voljo podatkov",
+  "tooltip1": "imajo osnovne digitalne veščine",
   "textSourceDescription": "Vir",
   "textSource": "Eurostat",
   "textNoteDescription": "Opomba",
-  "textNote": "Splošne digitalne veščine se nanašajo na pet področij: veščine informacijske in podatkovne pismenosti, veščine komuniciranja in sodelovanja, spretnosti ustvarjanja digitalnih vsebin, varnostne veščine in veščine reševanja problemov. Da bi imeli ljudje vsaj osnovne digitalne veščine, morajo znati izvajati vsaj eno dejavnost, povezano z vsakim področjem.",
-  "textDataAccess": "Dostopajte do podatkov",
+  "textNote": "Splošne digitalne veščine se nanašajo na pet področij: informacijska in podatkovna pismenost, komunikacijske in sodelovalne veščine, veščine ustvarjanja digitalnih vsebin, varnostne veščine in veščine reševanja problemov. Da bi ljudje imeli vsaj osnovne splošne digitalne veščine, morajo znati opraviti vsaj eno dejavnost, povezano z vsakim področjem.",
+  "textDataAccess": "Dostop do podatkov",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
-  "textCountryClick": "Kliknite za več informacij",
-  "extraInfoText_BE": "Glede na to, da potreba po soglasju na številnih področjih povzroča birokratsko ozko grlo, obstaja določena logika za prehod na glasovanje s kvalificirano večino, kjer je to mogoče. V praksi je kvalificirana večina takrat, ko 15 od 27 držav članic glasuje za nekaj, če skupaj predstavljajo več kot 65 odstotkov od 450 milijonov državljanov EU.",
-  "extraInfoLink_BE": "Preberi več",
-  "extraInfoText_DE": "Verjetno ni naključje, da je le dva dni kasneje Evropska komisija sporočila, da bo končno sprožila mehanizem pogojevanja, ki izplačila EU sredstev povezuje s spoštovanjem vladavine prava. Budimpešta se sooča s kritikami zaradi omejevanja svobode medijev, navzkrižja interesov in korupcije.",
-  "extraInfoLink_DE": "Preberi več",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "V tem kontekstu je bolgarska vlada ustanovila novo enoto za spremljanje medijev. Nova enota je zasnovana tako, da spremlja vse oblike medijev glede usmerjenih dezinformacij, vendar – za razliko od državnega neodvisnega sveta za elektronske medije – nima pristojnosti za urejanje ali sankcioniranje. In tudi ne bi smela, poudarja Božanov v intervjuju za Bolgarski nacionalni radio.",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Gašper Dovžan, državni sekretar na slovenskem zunanjem ministrstvu in član odbora konference, pravi, da se Slovenija zagotovo ne izogiba pogumnim odločitvam in ne zavrača možnosti premika k kvalificirani večini. Meni pa, da je še vedno prostor za konsenzno odločanje.",
-  "extraInfoLink_IT": "Več informacij",
-  "extraInfoText_LU": "Luksemburški evropski poslanec Marc Angel pa je prepričan, da so spremembe pogodbe nujno potrebne – ne le zato, da bi bili postopki odločanja manj okorni, ampak tudi zaradi razširitve področja pristojnosti EU. V intervjuju za luksemburško nacionalno radiotelevizijo 100,7 trdi, da so državljani EU to jasno zahtevali med postopkom konference.",
-  "extraInfoLink_LU": "Preberi več",
-  "extraInfoText_PL": "Liutauras Gudzinskas, profesor politologije na Univerzi v Vilniusu, pravi Žinių Radijasu, da čeprav bi bil predlog Evropske komisije za krepitev pluralizma in neodvisnosti medijev ter njihovo zaščito pred političnimi ali poslovnimi vmešavanjem lahko koristno preventivno orodje v mnogih državah, je verjetno za Madžarsko prepozno.",
-  "extraInfoLink_PL": "Več informacij",
-  "extraInfoText_RO": "Čeprav je 3. maja svetovni dan svobode tiska, Litva praznuje svobodo tiska vsako leto 7. maja – ker ta datum pomeni konec carske prepovedi izdajanja in distribucije knjig v litovščini.",
-  "extraInfoLink_RO": "Preveri to",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Kliknite za več informacij"
 }
