--- a/static/languages/sv.json
+++ b/static/languages/sv.json
@@ -1,31 +1,13 @@
 {
-  "heading": "Hur djupgående är de grundläggande digitala färdigheterna bland 15-74-åriga medborgare i alla EU-länder?",
-  "subheading": "År 2022 rapporterade nästan 30 % av de sysselsatta i EU i åldern 15–74 att de använde digitala enheter under hela eller större delen av sin arbetstid. Dessutom svarade 62 % av de intervjuade små och medelstora företagen 2023 (små och medelstora företag) i Flash Eurobarometer 529 att digital kompetens har blivit allt viktigare för deras verksamhet. Från och med 2023 har 56 % av EU-medborgarna åtminstone grundläggande digitala färdigheter.",
-  "legend1": "Ingen data tillgänglig",
+  "heading": "Hur djupgående är de grundläggande digitala färdigheterna bland 15–74-åriga medborgare i alla EU-länder?",
+  "subheading": "År 2022 uppgav nästan 30 % av de anställda i EU i åldern 15–74 år att de använde digitala enheter under hela eller större delen av sin arbetstid. Dessutom svarade 62 % av de små och medelstora företag som intervjuades 2023 i Flash Eurobarometer 529 att digitala färdigheter har blivit allt viktigare för deras företag. År 2023 hade 56 % av EU:s invånare åtminstone grundläggande digitala färdigheter.",
+  "legend1": "Inga data tillgängliga",
   "tooltip1": "ha grundläggande digitala färdigheter",
   "textSourceDescription": "Källa",
   "textSource": "Eurostat",
   "textNoteDescription": "Notera",
-  "textNote": "Övergripande digitala färdigheter avser fem områden: kunskaps- och datakompetens, kommunikations- och samarbetsförmåga, färdigheter för att skapa digitalt innehåll, säkerhetsförmåga och problemlösningsförmåga. För att ha åtminstone grundläggande övergripande digitala färdigheter måste människor veta hur man gör minst en aktivitet relaterad till varje område.",
-  "textDataAccess": "Få åtkomst till data",
+  "textNote": "Övergripande digitala färdigheter avser fem områden: informations- och datakunskap, kommunikations- och samarbetsförmåga, färdigheter i att skapa digitalt innehåll, säkerhetsförmåga och problemlösningsförmåga. För att ha åtminstone grundläggande övergripande digitala färdigheter måste man veta hur man utför minst en aktivitet relaterad till varje område.",
+  "textDataAccess": "Åtkomst till data",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
-  "textCountryClick": "Klicka för mer info",
-  "extraInfoText_BE": "Eftersom behovet av enhällighet orsakar en byråkratisk flaskhals på många områden, finns det en viss logik att gå mot omröstning med kvalificerad majoritet där så är möjligt. I praktiken är kvalificerad majoritet när 15 av de 27 medlemsländerna röstar för något, så länge de tillsammans representerar mer än 65 procent av EU:s 450 miljoner medborgare.",
-  "extraInfoLink_BE": "Läs mer",
-  "extraInfoText_DE": "Det är förmodligen ingen slump att EU-kommissionen bara två dagar senare meddelade att den äntligen skulle utlösa villkorsmekanismen, som kopplar utbetalningen av EU-medel till respekten för rättsstatsprincipen. Budapest möter kritik för begränsningar av mediefrihet, intressekonflikter och korruption.",
-  "extraInfoLink_DE": "Läs mer",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "I detta sammanhang har den bulgariska regeringen inrättat en ny enhet för medieövervakning. Den nya enheten är utformad för att övervaka alla former av media för riktad desinformation men – till skillnad från landets oberoende Council for Electronic Media – har inte makten att reglera eller sanktionera. Och det borde det inte heller, betonar Bozhanov i en intervju med Bulgarian National Radio.",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Gašper Dovžan, statssekreterare vid Sloveniens utrikesministerium och medlem i konferenskommittén, säger att Slovenien verkligen inte drar sig för modiga beslut eller förkastar möjligheten till en övergång till kvalificerad majoritet. Han menar dock att det fortfarande finns en plats för konsensusbeslut.",
-  "extraInfoLink_IT": "Mer information",
-  "extraInfoText_LU": "Ändå är den luxemburgske parlamentsledamoten Marc Angel övertygad om att fördragsändringar är absolut nödvändiga – inte bara för att göra beslutsfattande förfaranden mindre krångliga, utan också för att vidga EU:s behörighetsområde. Han hävdar, i en intervju med Luxemburgs nationella programföretag 100,7, att EU-medborgare tydligt bad om detta under konferensprocessen.",
-  "extraInfoLink_LU": "Läs mer",
-  "extraInfoText_PL": "Liutauras Gudzinskas, professor i statsvetenskap vid Vilnius universitet, säger till Žinių Radijas att även om EU-kommissionens förslag att stärka mediernas mångfald och oberoende och skydda dem från politisk eller affärsmässig inblandning kan vara ett användbart förebyggande verktyg i många länder, är det troligt. för sent för Ungern.",
-  "extraInfoLink_PL": "Mer information",
-  "extraInfoText_RO": "Trots att det är världspressfrihetsdagen den 3 maj, firar Litauen pressfriheten varje år den 7 maj – eftersom detta datum markerar slutet på tsarförbudet mot publicering och distribution av böcker på litauiska.",
-  "extraInfoLink_RO": "Kolla detta",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Klicka för mer information"
 }
